CVS_SILENT made messages

--- a/buildtools/ada/kdevadaproject.desktop
+++ b/buildtools/ada/kdevadaproject.desktop
@@ -13,12 +13,14 @@ Comment[fr]=Un module externe pour la gestion de projet avec le langage ADA.
 Comment[hu]=Ada projekt
 Comment[it]=Progetto Ada
 Comment[nl]=Ada-project
+Comment[pl]=Projekt: Ada
 Comment[pt]=Projecto Ada
 Comment[pt_BR]=Projeto Ada
 Comment[ro]=Proiect Ada
 Comment[ru]=Проект Ada
 Comment[sl]=Projekt Ada
 Comment[sr]=Ada пројекат
+Comment[sr@Latn]=Ada projekat
 Comment[sv]=Ada-projekt
 Comment[ta]=அடா பிராஜக்ட்
 Comment[uz]=Ada лойиҳаси
@@ -26,6 +28,7 @@ Comment[xx]=xxAda Projectxx
 Comment[zh_CN]=Ada项目
 Name=KDevAdaProject
 Name[de]=Ada-Projekt (KDevelop)
+Name[pl]=KDevProjektAda
 Name[sv]=KDevelop Ada-projekt
 Name[ta]=கெடெவ் அடா பிராஜக்ட்
 Name[xx]=xxKDevAdaProjectxx
@@ -40,11 +43,13 @@ GenericName[fr]=Projet avec ADA
 GenericName[hu]=Ada projekt
 GenericName[it]=Project con Ada
 GenericName[nl]=Ada-project
+GenericName[pl]=Projekt: Ada
 GenericName[pt]=Projecto Ada
 GenericName[pt_BR]=Projeto Ada
 GenericName[ru]=Проект Ada
 GenericName[sl]=Projekt Ada
 GenericName[sr]=Ada пројекат
+GenericName[sr@Latn]=Ada projekat
 GenericName[sv]=Ada-projekt
 GenericName[ta]=அடா பிராஜக்ட்
 GenericName[uz]=Ada лойиҳаси
