--- a/buildtools/ant/kdevantproject.desktop
+++ b/buildtools/ant/kdevantproject.desktop
@@ -13,11 +13,13 @@ Comment[fr]=Un module externe pour la gestion de projet avec le programme « Ant
 Comment[hu]=Ant projekt
 Comment[it]=Progetto Ant
 Comment[nl]=Ant-project
+Comment[pl]=Projekt: Ant
 Comment[pt]=Projecto Ant
 Comment[pt_BR]=Projeto Ant
 Comment[ru]=Проект Ant
 Comment[sl]=Projekt Ant
 Comment[sr]=Ant пројекат
+Comment[sr@Latn]=Ant projekat
 Comment[sv]=Ant-projekt
 Comment[ta]=ஆன்ட்பிராஜக்ட்
 Comment[uz]=Ant лойиҳаси
@@ -25,6 +27,7 @@ Comment[xx]=xxAnt Projectxx
 Comment[zh_CN]=Ant项目
 Name=KDevAntProject
 Name[de]=Ant-Projekt (KDevelop)
+Name[pl]=KDevProjektAnt
 Name[sv]=KDevelop Ant-projekt
 Name[ta]=கெடெவ்ஆன்ட் பிராஜக்ட்
 Name[xx]=xxKDevAntProjectxx
@@ -39,11 +42,13 @@ GenericName[fr]=Projet avec Ant
 GenericName[hu]=Ant projekt
 GenericName[it]=Project con Ant
 GenericName[nl]=Ant-project
+GenericName[pl]=Projekt: Ant
 GenericName[pt]=Projecto Ant
 GenericName[pt_BR]=Projeto Ant
 GenericName[ru]=Проект Ant
 GenericName[sl]=Projekt Ant
 GenericName[sr]=Ant пројекат
+GenericName[sr@Latn]=Ant projekat
 GenericName[sv]=Ant-projekt
 GenericName[ta]=ஆன்ட்பிராஜக்ட்
 GenericName[uz]=Ant лойиҳаси
