--- a/buildtools/custommakefiles/kdevcustomproject.desktop
+++ b/buildtools/custommakefiles/kdevcustomproject.desktop
@@ -13,16 +13,19 @@ Comment[fr]=Un module externe pour la gestion de projet personnalisé.
 Comment[hu]=Egyedi projekt
 Comment[it]=Progetto personalizzato
 Comment[nl]=Aangepast project
+Comment[pl]=Własny projekt
 Comment[pt]=Projecto Personalizado
 Comment[pt_BR]=Projeto Personalizado
 Comment[ru]=Особый проект
 Comment[sr]=Произвољан пројекат
+Comment[sr@Latn]=Proizvoljan projekat
 Comment[sv]=Eget projekt
 Comment[ta]=தனிப்பயன் பிராஜக்ட்
 Comment[xx]=xxCustom Projectxx
 Comment[zh_CN]=自定义项目
 Name=KDevCustomProject
 Name[de]=Benutzerdefinierte Projekt (KDevelop)
+Name[pl]=KDevWłasnyProjekt
 Name[sv]=KDevelop eget projekt
 Name[ta]=கெடெவ் தனிப்பயன் பிராஜக்ட்
 Name[xx]=xxKDevCustomProjectxx
@@ -37,10 +40,12 @@ GenericName[fr]=Projet personnalisé
 GenericName[hu]=egyedi projekt
 GenericName[it]=Progetto personalizzato
 GenericName[nl]=Aangepast project
+GenericName[pl]=Projekt: własny
 GenericName[pt]=Projecto Personalizado
 GenericName[pt_BR]=Projeto Personalizado
 GenericName[ru]=Особый проект
 GenericName[sr]=Произвољан пројекат
+GenericName[sr@Latn]=Proizvoljan projekat
 GenericName[sv]=Eget projekt
 GenericName[ta]=தனிப்பயன் பிராஜக்ட்
 GenericName[xx]=xxCustom Projectxx
