--- a/buildtools/haskell/kdevhaskellproject.desktop
+++ b/buildtools/haskell/kdevhaskellproject.desktop
@@ -13,16 +13,19 @@ Comment[fr]=Un module externe pour la gestion de projet avec la langage Haskell.
 Comment[hu]=Haskell projekt
 Comment[it]=Progetto per Haskell
 Comment[nl]=Haskell-project
+Comment[pl]=Projekt: Haskell
 Comment[pt]=Projecto de Haskell
 Comment[pt_BR]=Projeto Haskell
 Comment[ru]=Проект Haskell
 Comment[sr]=Haskell пројекат
+Comment[sr@Latn]=Haskell projekat
 Comment[sv]=Haskell-projekt
 Comment[ta]=ஹாஸ்கெல் பிராஜக்ட்
 Comment[xx]=xxHaskell Projectxx
 Comment[zh_CN]=Haskell项目
 Name=KDevHaskellProject
 Name[de]=Haskell-Projekt (KDevelop)
+Name[pl]=KDevProjektHaskell
 Name[sv]=KDevelop Haskell-projekt
 Name[ta]=கெடெவ் ஹாஸ்கெல் பிராஜக்ட்
 Name[xx]=xxKDevHaskellProjectxx
@@ -37,10 +40,12 @@ GenericName[fr]=Projet avec Haskell
 GenericName[hu]=Haskell projekt
 GenericName[it]=Progetto Haskell
 GenericName[nl]=Haskell-project
+GenericName[pl]=Projekt: Haskell
 GenericName[pt]=Projecto de Haskell
 GenericName[pt_BR]=Projeto Haskell
 GenericName[ru]=Проект Haskell
 GenericName[sr]=Haskell пројекат
+GenericName[sr@Latn]=Haskell projekat
 GenericName[sv]=Haskell-projekt
 GenericName[ta]=ஹாஸ்கெல் பிராஜக்ட்
 GenericName[xx]=xxHaskell Projectxx
