--- a/buildtools/qmake/kdevtmakeproject.desktop
+++ b/buildtools/qmake/kdevtmakeproject.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Un module externe pour la gestion de projet avec le programme « TMa
 Comment[hu]=TMake-projekt
 Comment[it]=Progetto per TMake
 Comment[nl]=TMake-project
+Comment[pl]=Projekt: TMake
 Comment[pt]=Projecto TMake
 Comment[pt_BR]=Projeto TMake
 Comment[ru]=Проект TMake
 Comment[sr]=TMake пројекат
+Comment[sr@Latn]=TMake projekat
 Comment[sv]=Tmake-projekt
 Comment[ta]=டிமேக் பிராஜக்ட்
 Comment[xx]=xxTMake Projectxx
 Comment[zh_CN]=TMake项目
 Name=KDevTMakeProject
 Name[de]=TMake-Projekt (KDevelop)
+Name[pl]=KDevProjektTMake
 Name[sv]=KDevelop Tmake-projekt
 Name[ta]=கெடெவ் டிமேக் பிராஜக்ட்
 Name[xx]=xxKDevTMakeProjectxx
@@ -36,10 +39,12 @@ GenericName[fr]=Projet avec TMake
 GenericName[hu]=TMake-projekt
 GenericName[it]=Progetto per TMake
 GenericName[nl]=TMake-project
+GenericName[pl]=Projekt: TMake
 GenericName[pt]=Projecto TMake
 GenericName[pt_BR]=Projeto TMake
 GenericName[ru]=Проект TMake
 GenericName[sr]=TMake пројекат
+GenericName[sr@Latn]=TMake projekat
 GenericName[sv]=Tmake-projekt
 GenericName[ta]=டிமேக் பிராஜக்ட்
 GenericName[xx]=xxTMake Projectxx
