--- a/buildtools/qmake/kdevtrollproject.desktop
+++ b/buildtools/qmake/kdevtrollproject.desktop
@@ -12,10 +12,12 @@ Comment[fr]=Un module externe pour la gestion de projet avec le programme « QMa
 Comment[hu]=QMake-projekt
 Comment[it]=Progetto per QMake
 Comment[nl]=QMake-project
+Comment[pl]=Projekt: QMake
 Comment[pt]=Projecto QMake
 Comment[pt_BR]=Projeto QMake
 Comment[ru]=Проект QMake
 Comment[sr]=QMake пројекат
+Comment[sr@Latn]=QMake projekat
 Comment[sv]=Qmake-projekt
 Comment[ta]=க்யுமேக் பிராஜக்ட்
 Comment[uz]=QMake лойиҳаси
@@ -23,6 +25,7 @@ Comment[xx]=xxQMake Projectxx
 Comment[zh_CN]=QMake项目
 Name=KDevTrollProject
 Name[de]=QMake-Projekt (KDevelop)
+Name[pl]=KDevProjektTroll
 Name[sv]=KDevelop Troll-projekt
 Name[ta]=கெடெவ் டிரால் பிராஜக்ட்
 Name[xx]=xxKDevTrollProjectxx
@@ -37,10 +40,12 @@ GenericName[fr]=Projet avec QMake
 GenericName[hu]=QMake-projekt
 GenericName[it]=Progetto per QMake
 GenericName[nl]=QMake-project
+GenericName[pl]=Projekt: QMake
 GenericName[pt]=Projecto QMake
 GenericName[pt_BR]=Projeto QMake
 GenericName[ru]=Проект QMake
 GenericName[sr]=QMake пројекат
+GenericName[sr@Latn]=QMake projekat
 GenericName[sv]=Qmake-projekt
 GenericName[ta]=க்யுமேக் பிராஜக்ட்
 GenericName[uz]=QMake лойиҳаси
