--- a/buildtools/script/kdevscriptproject.desktop
+++ b/buildtools/script/kdevscriptproject.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Un module externe pour la gestion de projets avec les langages de sc
 Comment[hu]=Szkript-projekt
 Comment[it]=Progetto con linguaggio di scripting
 Comment[nl]=Scripttaal-project
+Comment[pl]=Projekt w języku skryptowym
 Comment[pt]=Projecto de uma Linguagem de 'Scripting'
 Comment[pt_BR]=Projeto de Linguagem de Script
 Comment[ru]=Проект скриптового языка
 Comment[sr]=Пројекат скриптног језика
+Comment[sr@Latn]=Projekat skriptnog jezika
 Comment[sv]=Projekt för skriptspråk
 Comment[ta]=ஸ்கிரிப்டிங் மொழி பிராஜக்ட்
 Comment[xx]=xxScripting Language Projectxx
 Comment[zh_CN]=脚本语言项目
 Name=KDevScriptProject
 Name[de]=Skriptsprachen-Projekt (KDevelop)
+Name[pl]=KDevProjektSkrypt
 Name[sv]=KDevelop skriptprojekt
 Name[ta]=கெடெவ் ஸ்கிரிப்ட் பிராஜக்ட்
 Name[xx]=xxKDevScriptProjectxx
@@ -35,10 +38,12 @@ GenericName[fr]=Projet avec langages scripts
 GenericName[hu]=szkriptprojekt
 GenericName[it]=Progetto con linguaggio di scripting
 GenericName[nl]=Scripttaal-project
+GenericName[pl]=Projekt w języku skryptowym
 GenericName[pt]=Projecto de uma Linguagem de 'Scripting'
 GenericName[pt_BR]=Projeto de Linguagem de Script
 GenericName[ru]=Проект скриптового языка
 GenericName[sr]=Пројекат скриптног језика
+GenericName[sr@Latn]=Projekat skriptnog jezika
 GenericName[sv]=Projekt för skriptspråk
 GenericName[ta]=ஸ்கிரிப்டிங் மொழி பிராஜக்ட்
 GenericName[xx]=xxScripting Language Projectxx
