--- a/editors/nedit/kneditpart.desktop
+++ b/editors/nedit/kneditpart.desktop
@@ -10,11 +10,13 @@ Comment[fr]=Un module externe pour la gestion du programme « nedit ».
 Comment[hu]=NEdit-támogatás
 Comment[it]=Supporto per NEdit
 Comment[nl]=Ondersteuning voor NEdit
+Comment[pl]=Obsługa NEdit-a
 Comment[pt]=Suporte ao NEdit
 Comment[pt_BR]=Suporte ao NEdit
 Comment[ru]=Поддержка редактора NEdit
 Comment[sl]=Podpora NEdit
 Comment[sr]=Подршка за NEdit
+Comment[sr@Latn]=Podrška za NEdit
 Comment[sv]=Nedit-stöd
 Comment[ta]=Nதொகுப்பு ஆதரவு
 Comment[xx]=xxNEdit supportxx
@@ -33,11 +35,13 @@ GenericName[fr]=Gestion de NEdit
 GenericName[hu]=NEdit-támogatás
 GenericName[it]=Supporto per NEdit
 GenericName[nl]=Ondersteuning voor NEdit
+GenericName[pl]=Obsługa NEdit-a
 GenericName[pt]=Suporte ao NEdit
 GenericName[pt_BR]=Suporte ao NEdit
 GenericName[ru]=Поддержка редактора NEdit
 GenericName[sl]=Podpora NEdit
 GenericName[sr]=Подршка за NEdit
+GenericName[sr@Latn]=Podrška za NEdit
 GenericName[sv]=Nedit-stöd
 GenericName[ta]=Nதொகுப்பு ஆதரவு
 GenericName[xx]=xxNEdit supportxx
