--- a/editors/qeditor/qeditor_part.desktop
+++ b/editors/qeditor/qeditor_part.desktop
@@ -14,6 +14,7 @@ Comment[pt]=Editor de Texto Baseado no Qt Designer
 Comment[pt_BR]=Editor de Texto Baseado no Qt Designer
 Comment[ru]=Текстовый редактор из Qt Designer
 Comment[sr]=Уређивач текста заснован на QT Designer-у
+Comment[sr@Latn]=Uređivač teksta zasnovan na QT Designer-u
 Comment[sv]=Qt Designer-baserad texteditor
 Comment[ta]=Qtயை சார்ந்த வடிவமைப்பு உரை தொகுப்பாளர்
 Comment[xx]=xxQt Designer Based Text Editorxx
@@ -28,10 +29,12 @@ Name[fr]=Editeur de texte basé sur Qt Designer
 Name[hu]=Qt Designer-alapú szövegszerkesztő
 Name[it]=Editor di testo basato su Qt Designer
 Name[nl]=Teksteditor gebaseerd op Qt Designer
+Name[pl]=Oparty na Qt edytor tekstu
 Name[pt]=Editor de Texto Baseado no Qt Designer
 Name[pt_BR]=Editor de Texto Baseado no Qt Designer
 Name[ru]=Qt Designer Based Editor
 Name[sr]=Уређивач текста заснован на QT Designer-у
+Name[sr@Latn]=Uređivač teksta zasnovan na QT Designer-u
 Name[sv]=Qt Designer-baserad texteditor
 Name[ta]=Qtயை சார்ந்த வடிவமைப்பு உரை தொகுப்பாளர்
 Name[xx]=xxQt Designer Based Text Editorxx
@@ -46,11 +49,13 @@ GenericName[fr]=Editeur QEditor
 GenericName[hu]=QEditor-támogatás
 GenericName[it]=Supporto per QEditor
 GenericName[nl]=Ondersteuning voor QEditor
+GenericName[pl]=Obsługa QEditor-a
 GenericName[pt]=Suporte ao QEditor
 GenericName[pt_BR]=Suporte ao QEditor
 GenericName[ru]=Поддержка QEditor
 GenericName[sl]=Podpora QEditor
 GenericName[sr]=Подршка за QEditor
+GenericName[sr@Latn]=Podrška za QEditor
 GenericName[sv]=Qeditor-stöd
 GenericName[ta]=Qதொகுப்பாளர் ஆதரவு
 GenericName[xx]=xxQEditor Supportxx
