--- a/embedded/visualboyadvance/kdevpart_visualboyadvance.desktop
+++ b/embedded/visualboyadvance/kdevpart_visualboyadvance.desktop
@@ -12,10 +12,12 @@ Comment[fr]=Un module externe pour la gestion de la plate-forme « VisualBoyAdva
 Comment[hu]=A VisualBoyAdvance egy emulátor a Game Boy Advance-hoz - http://vboy.emuhq.com/
 Comment[it]=VisualBoyAdvance è un emulatore per GameBoyAdvance. http://vboy.emuhq.com/
 Comment[nl]=VisualBoyAdvance is een GameBoyAdvance-emulator (http://vboy.emuhq.com/)
+Comment[pl]=VisualBoyAdvance to emulator GameBoyAdvance. http://vboy.emuhq.com/
 Comment[pt]=O VisualBoyAdvance é um emulador do GameBoyAdvance. http://vboy.emuhq.com/
 Comment[pt_BR]=VisualBoyAdvance é um emulador do GameBoyAdvance. http://vboy.emuhq.com/
 Comment[ru]=VisualBoyAdvance - эмулятор GameBoyAdvance. http://vboy.emuhq.com/
 Comment[sr]=VisualBoyAdvance je емулатор GameBoyAdvance-а. http://vboy.emuhq.com/
+Comment[sr@Latn]=VisualBoyAdvance je emulator GameBoyAdvance-a. http://vboy.emuhq.com/
 Comment[sv]=VisualBoyAdvance är en emulator för GameBoyAdvance. http://vboy.emuhq.com/
 Comment[ta]=கெடெவ் காட்சியாக்க பாய் அட்வான்ஸ் பொன்மி.. http://vboy.emuhq.com/
 Comment[xx]=xxVisualBoyAdvance is a GameBoyAdvance emulator. http://vboy.emuhq.com/xx
@@ -35,10 +37,12 @@ GenericName[fr]=Gestion de VisualBoyAdvance
 GenericName[hu]=VisualBoyAdvance-támogatás
 GenericName[it]=Supporto per VisualBoyAdvance
 GenericName[nl]=Ondersteuning voor VisualBoyAdvance
+GenericName[pl]=Obsługa VisualBoyAdvance
 GenericName[pt]=Suporte a VisualBoyAdvance
 GenericName[pt_BR]=Suporte ao VisualBoyAdvance
 GenericName[ru]=Поддержка VisualBoyAdvance
 GenericName[sr]=Подршка за VisualBoyAdvance
+GenericName[sr@Latn]=Podrška za VisualBoyAdvance
 GenericName[sv]=Stöd för Visual Boy Advance
 GenericName[ta]=காட்சியாக்க பாய் அட்வான்ஸ் ஆதரவு
 GenericName[xx]=xxVisualBoyAdvance supportxx
