--- a/kdevelop.desktop
+++ b/kdevelop.desktop
@@ -20,11 +20,13 @@ GenericName[fr]=Environnement de développement intégré
 GenericName[hu]=fejlesztőkörnyezet
 GenericName[it]=Ambiente di sviluppo integrato
 GenericName[nl]=Geïntegreerde programmeeromgeving
+GenericName[pl]=Zintegrowane środkowisko programistyczne
 GenericName[pt]=Ambiente de Desenvolvimento Integrado
 GenericName[pt_BR]=IDE - Ambiente de Desenvolvimento Integrado
 GenericName[ru]=Интегрированная среда разработки
 GenericName[sl]=Integrirano razvijalno okolje
 GenericName[sr]=Интегрисано развојно окружење
+GenericName[sr@Latn]=Integrisano razvojno okruženje
 GenericName[sv]=Integrerad utvecklingsmiljö
 GenericName[ta]=இன்டகரேடட் டெவலப்மென்ட் என்விரான்மன்ட்
 GenericName[zh_CN]=集成开发环境
