--- a/languages/ada/kdevadasupport.desktop
+++ b/languages/ada/kdevadasupport.desktop
@@ -12,17 +12,20 @@ Comment[fr]=Un module externe pour la gestion du langage ADA.
 Comment[hu]=Ada nyelvi támogatás
 Comment[it]=Supporto al linguaggio Ada
 Comment[nl]=Ondersteuning voor Ada
+Comment[pl]=Obsługa języka Ada
 Comment[pt]=Suporte à Linguagem Ada
 Comment[pt_BR]=Suporte à Linguagem Ada
 Comment[ru]=Поддержка языка Ada
 Comment[sl]=Podpora jeziku ada
 Comment[sr]=Ada језичка подршка
+Comment[sr@Latn]=Ada jezička podrška
 Comment[sv]=Stöd för språket Ada
 Comment[ta]=அடா மொழி  ஆதரவு
 Comment[xx]=xxAda Language Supportxx
 Comment[zh_CN]=Ada语言支持
 Name=KDevAdaSupport
 Name[de]=Ada-Unterstützung (KDevelop)
+Name[pl]=KDevObsługaAdy
 Name[sv]=KDevelop Ada-stöd
 Name[ta]=கெடெவ் அடா ஆதரவு
 Name[xx]=xxKDevAdaSupportxx
@@ -36,11 +39,13 @@ GenericName[fr]=Langage ADA
 GenericName[hu]=Ada-támogatás
 GenericName[it]=Supporto al linguaggio Ada
 GenericName[nl]=Ondersteuning voor Ada
+GenericName[pl]=Obsługa języka Ada
 GenericName[pt]=Suporte à Linguagem Ada
 GenericName[pt_BR]=Suporte à Linguagem Ada
 GenericName[ru]=Поддержка языка Ada
 GenericName[sl]=Podpora jeziku ada
 GenericName[sr]=Ada језичка подршка
+GenericName[sr@Latn]=Ada jezička podrška
 GenericName[sv]=Stöd för språket Ada
 GenericName[ta]=அடா மொழி  ஆதரவு
 GenericName[xx]=xxAda Language Supportxx
