--- a/languages/bash/kdevbashsupport.desktop
+++ b/languages/bash/kdevbashsupport.desktop
@@ -12,17 +12,20 @@ Comment[fr]=Un module externe pour la gestion de l'interpréteur BASH.
 Comment[hu]=Bash-támogatás
 Comment[it]=Supporto per Bash
 Comment[nl]=Ondersteuning voor Bash
+Comment[pl]=Obsługa bash-a
 Comment[pt]=Suporte a Bash
 Comment[pt_BR]=Suporte ao Bash
 Comment[ru]=Поддержка языка bash
 Comment[sl]=Podpora bash
 Comment[sr]=Bash подршка
+Comment[sr@Latn]=Bash podrška
 Comment[sv]=Bash-stöd
 Comment[ta]=பாஷ் ஆதரவு
 Comment[xx]=xxBash Supportxx
 Comment[zh_CN]=Bash支持
 Name=KDevBashSupport
 Name[de]=Bash-Unterstützung (KDevelop)
+Name[pl]=KDevObsługaBasha
 Name[sv]=KDevelop Bash-stöd
 Name[ta]=கெடெவ்பாஷ் ஆதரவு
 Name[xx]=xxKDevBashSupportxx
@@ -36,11 +39,13 @@ GenericName[fr]=Interpréteur BASH
 GenericName[hu]=Bash-támogatás
 GenericName[it]=Supporto Bash
 GenericName[nl]=Ondersteuning voor Bash
+GenericName[pl]=Obsługa bash-a
 GenericName[pt]=Suporte de Bash
 GenericName[pt_BR]=Suporte ao Bash
 GenericName[ru]=Поддержка языка bash
 GenericName[sl]=Podpora bash
 GenericName[sr]=Bash подршка
+GenericName[sr@Latn]=Bash podrška
 GenericName[sv]=Bash-stöd
 GenericName[ta]=பாஷ் ஆதரவு
 GenericName[xx]=xxBash Supportxx
