--- a/languages/cpp/app_templates/dcopservice/dcopservice.desktop
+++ b/languages/cpp/app_templates/dcopservice/dcopservice.desktop
@@ -16,10 +16,12 @@ Comment[fr]=Un modèle pour les services DCOP.
 Comment[hu]=Sablon DCOP-szolgáltatásokhoz
 Comment[it]=Modello per servizi dcop
 Comment[nl]=Sjabloon voor DCOP-services
+Comment[pl]=Szablon dla usług dcop
 Comment[pt]=Modelo para serviços dcop
 Comment[pt_BR]=Modelo para serviços dcop
 Comment[ru]=Шаблон для сервисов dcop
 Comment[sr]=Шаблон за dcop сервисе
+Comment[sr@Latn]=Šablon za dcop servise
 Comment[sv]=Mall för DCOP-tjänster
 Comment[ta]=டிகாப்சேவைக்கான வார்ப்புரு
 Comment[xx]=xxTemplate for dcop servicesxx
