--- a/languages/cpp/app_templates/kicker/applet.desktop
+++ b/languages/cpp/app_templates/kicker/applet.desktop
@@ -10,10 +10,12 @@ Comment[fr]=Un applet pour le tableau de bord nommé $NAME$.
 Comment[hu]=$NAME$ nevű panel-kisalkalmazás
 Comment[it]=Un applet per il pannello chiamata $NAME$
 Comment[nl]=Een paneel-applet met naam $NAME$
+Comment[pl]=Aplet panela o nazwie $NAME$
 Comment[pt]=Um 'applet' para o painel chamado $NAME$
 Comment[pt_BR]=Uma applet de painel chamada $NAME$
 Comment[ru]=Аплет панели $NAME$
 Comment[sr]=Панелни аплет под називом $NAME$
+Comment[sr@Latn]=Panelni aplet pod nazivom $NAME$
 Comment[sv]=Ett panelminiprogram som kallas $NAME$
 Comment[ta]=ஒரு பானல் ஆப்லெட்  $NAME$ என்ற்உ அழைக்கப்படுகிறது
 Comment[xx]=xxA panel applet called $NAME$xx
