--- a/languages/cpp/app_templates/qtopiaapp/example.desktop
+++ b/languages/cpp/app_templates/qtopiaapp/example.desktop
@@ -9,10 +9,12 @@ Comment[fr]=Un programme $APPNAME$
 Comment[hu]=$APPNAME$ program
 Comment[it]=Un programma per $APPNAME$
 Comment[nl]=Een $APPNAME$ programma
+Comment[pl]=Program $APPNAME$
 Comment[pt]=O programa $APPNAME$
 Comment[pt_BR]=Um Programa $APPNAME$
 Comment[ru]=Программа $APPNAME$
 Comment[sr]=$APPNAME$ програм
+Comment[sr@Latn]=$APPNAME$ program
 Comment[sv]=Ett $APPNAME$-program
 Comment[ta]=ஒரு $APPNAME$  நிரல் 
 Comment[xx]=xxAn $APPNAME$ Programxx
