--- a/languages/cpp/pcsimporter/customimporter/kdevcustomimporter.desktop
+++ b/languages/cpp/pcsimporter/customimporter/kdevcustomimporter.desktop
@@ -2,6 +2,7 @@
 Type=Service
 Name=KDevCustomImporter
 Name[de]=PCS-Import (KDevelop)
+Name[pl]=KDevWłasnyImport
 Name[sv]=KDevelop egen import
 Name[ta]=கெடெவ் கஸ்டம் இற்அக்குமதியாளர்
 Name[xx]=xxKDevCustomImporterxx
@@ -15,10 +16,12 @@ Comment[fr]=Un module externe pour l'importation PCS de dossier personnalisé.
 Comment[hu]=KDevelop egyéni könyvtár PCS-importáló
 Comment[it]=Directory per l'importatore personalizzato PCS di KDevelop
 Comment[nl]=KDevelop PCS Importer voor eigen directories
+Comment[pl]=Własny program do importowania PCS dla KDevelopa
 Comment[pt]=Importador de PCS com Directoria Personalizada do KDevelop
 Comment[pt_BR]=Importador de Diretório PCS Personalizado para o KDevelop
 Comment[ru]=Загрузка символов из любого каталога в хранилище классов
 Comment[sr]=KDevelop-ов PCS увозник прилагођеног директоријума
+Comment[sr@Latn]=KDevelop-ov PCS uvoznik prilagođenog direktorijuma
 Comment[sv]=KDevelop PCS-import för egen katalog
 Comment[ta]=கெடெவலப் கஸ்டம் டைரக்ட்ரி இறக்குமதியாளர்
 Comment[xx]=xxKDevelop Custom Directory PCS Importerxx
