--- a/languages/cpp/pcsimporter/kdelibsimporter/kdevkdelibsimporter.desktop
+++ b/languages/cpp/pcsimporter/kdelibsimporter/kdevkdelibsimporter.desktop
@@ -2,6 +2,7 @@
 Type=Service
 Name=KDevKDELibsImporter
 Name[de]=KDELIBS-PCS-Import (KDevelop)
+Name[pl]=KDevKDEImportBib
 Name[sv]=KDevelop KDE-biblioteksimport
 Name[ta]=கெடெவ் கெடெலிப்ஸ் இறஅக்குமதியாளர்
 Name[xx]=xxKDevKDELibsImporterxx
@@ -15,10 +16,12 @@ Comment[fr]=Un module externe pour l'importation PCS de KDELibs.
 Comment[hu]=KDevelop KDELibs PCS-importáló
 Comment[it]=Importatore per KDELibs PCS di KDevelop
 Comment[nl]=KDevelop PCS Importer voor KDELibs
+Comment[pl]=KDevelop: importowanie PCS (KDELibs)
 Comment[pt]=Importador de PCS das KDELibs do KDevelop
 Comment[pt_BR]=Importador PCS do KDELibs para o KDevelop
 Comment[ru]=Загрузка символов из библиотеки KDELibs в хранилище классов
 Comment[sr]=KDevelop-ов KDELibs PCS увозник
+Comment[sr@Latn]=KDevelop-ov KDELibs PCS uvoznik
 Comment[sv]=KDevelop KDE-bibliotek PCS-import
 Comment[ta]=கெடெவலப் கெடெலிப்ஸ் பிசிஸ் இறக்குமதியாளர்
 Comment[xx]=xxKDevelop KDELibs PCS Importerxx
