--- a/languages/cpp/pcsimporter/qtimporter/kdevqtimporter.desktop
+++ b/languages/cpp/pcsimporter/qtimporter/kdevqtimporter.desktop
@@ -2,6 +2,7 @@
 Type=Service
 Name=KDevQtImporter
 Name[de]=QT-PCS-Import (KDevelop)
+Name[pl]=KDevImportQt
 Name[sv]=KDevelop QT-import
 Name[ta]=கெடெவ் க்யு இற்அக்குமதியாளர்
 Name[xx]=xxKDevQtImporterxx
@@ -15,10 +16,12 @@ Comment[fr]=Un module externe pour l'importation PCS de Qt.
 Comment[hu]=KDevelop Qt PCS-importáló
 Comment[it]=Importatore per Qt PCS per KDeveloper
 Comment[nl]=KDevelop PCS Importer voor Qt
+Comment[pl]=KDevelop: importowanie Qt PCS
 Comment[pt]=Importador de PCS para Qt do KDevelop
 Comment[pt_BR]=Importador PCS Qt para o KDevelop
 Comment[ru]=Загрузка символов из библиотеки Qt в хранилище классов
 Comment[sr]=KDevelop-ов Qt PCS увозник
+Comment[sr@Latn]=KDevelop-ov Qt PCS uvoznik
 Comment[sv]=KDevelop QT PCS-import
 Comment[ta]=கெடெவலப் Qt PCS இறக்குமதியாளர்
 Comment[xx]=xxKDevelop Qt PCS Importerxx
