--- a/languages/haskell/compiler/ghcoptions/kdevghcoptions.desktop
+++ b/languages/haskell/compiler/ghcoptions/kdevghcoptions.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Compilateur Haskell de Glasgow.
 Comment[hu]=Glasgow Haskell fordítóprogram
 Comment[it]=Compilatore per Glasgow Haskell
 Comment[nl]=Glasgow Haskell-compiler
+Comment[pl]=Kompilator Glasgow Haskell
 Comment[pt]=Compilador Glasgow Haskell
 Comment[pt_BR]=Compilador Glasgow Haskell
 Comment[ru]=Компилятор Glasgow Haskell
 Comment[sr]=Glasgow Haskell компајлер
+Comment[sr@Latn]=Glasgow Haskell kompajler
 Comment[sv]=Glasgow Haskell-kompilator
 Comment[ta]=கிலாஸ்கொ ஹாஸ்கெல் தொகுப்பி
 Comment[xx]=xxGlasgow Haskell Compilerxx
 Comment[zh_CN]=Glasgow Haskell编译器
 Name=GhcOptions
 Name[de]=Ghc-Einstellungen (KDevelop)
+Name[pl]=Opcje Ghc
 Name[sv]=Alternativ för ghc
 Name[ta]=Ghc விருப்பத்தேர்வுகள் 
 Name[xx]=xxGhcOptionsxx
