--- a/languages/haskell/kdevhaskellsupport.desktop
+++ b/languages/haskell/kdevhaskellsupport.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Un module externe pour la gestion du langage Haskell.
 Comment[hu]=Támogatás a Haskell nyelv használatához
 Comment[it]=Supporto per il linguaggio Haskell
 Comment[nl]=Ondersteuning voor Haskell
+Comment[pl]=Obsługa języka Haskell
 Comment[pt]=Suporte à Linguagem Haskell
 Comment[pt_BR]=Suporte à Liguagem Haskell
 Comment[ru]=Поддержка языка Haskell
 Comment[sr]=Haskell језичка подршка
+Comment[sr@Latn]=Haskell jezička podrška
 Comment[sv]=Stöd för språket Haskell
 Comment[ta]=ஹாஸ்கெல் மொழி ஆதரவு
 Comment[xx]=xxHaskell Language Supportxx
 Comment[zh_CN]=Haskell语言支持
 Name=KDevHaskellSupport
 Name[de]=Haskell-Unterstützung (KDevelop)
+Name[pl]=KDevObsługaHaskella
 Name[sv]=KDevelop Haskell-stöd
 Name[ta]=கெடெவ் ஹாஸ்கெல் ஆதரவு
 Name[xx]=xxKDevHaskellSupportxx
@@ -35,10 +38,12 @@ GenericName[fr]=Langage Haskell
 GenericName[hu]=Haskell-támogatás
 GenericName[it]=Supporto per il linguaggio Haskell
 GenericName[nl]=Ondersteuning voor Haskell
+GenericName[pl]=Obsługa języka Haskell
 GenericName[pt]=Suporte à Linguagem Haskell
 GenericName[pt_BR]=Suporte à Linguagem Haskell
 GenericName[ru]=Поддержка языка Haskell
 GenericName[sr]=Haskell језичка подршка
+GenericName[sr@Latn]=Haskell jezička podrška
 GenericName[sv]=Stöd för språket Haskell
 GenericName[xx]=xxHaskell Language Supportxx
 GenericName[zh_CN]=Haskell语言支持
