--- a/languages/java/app_templates/kappjava/app.desktop
+++ b/languages/java/app_templates/kappjava/app.desktop
@@ -16,10 +16,12 @@ Comment[fr]=Une application KPart en JAVA pour KDE
 Comment[hu]=Java-ban írt, KPart-alapú KDE-alkalmazás
 Comment[it]=Un'applicazione Java KDE KPart
 Comment[nl]=Een Java KDE KPart-toepassing
+Comment[pl]=Aplikacja Javy w KDE
 Comment[pt]=Uma Aplicação KDE KPart em Java
 Comment[pt_BR]=Um Aplicativo KPart do KDE para Java
 Comment[ru]=Приложение KPart для KDE на Java
 Comment[sr]=Java KDE KPart програм
+Comment[sr@Latn]=Java KDE KPart program
 Comment[sv]=Ett Java KDE Kpart-program
 Comment[ta]=ஜாவா கெடி கெபாகம் பன்பாடு
 Comment[xx]=xxA Java KDE KPart Applicationxx
