--- a/languages/java/debugger/kdevjavadebugger.desktop
+++ b/languages/java/debugger/kdevjavadebugger.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Un module externe servant d'interface pour le débogueur Java.
 Comment[hu]=Grafikus kezelőfelület a Java-nyomkövetőhöz
 Comment[it]=Interfaccia per il Debugger di Java
 Comment[nl]=Schil voor Java-debugger
+Comment[pl]=Interfejs do debugera Javy
 Comment[pt]=Interface de Depuração Java
 Comment[pt_BR]=Frontend do Depurador Java
 Comment[ru]=Интегрированный отладчик Java
 Comment[sr]=Сучеље за проналажење грешака у Java програмима
+Comment[sr@Latn]=Sučelje za pronalaženje grešaka u Java programima
 Comment[sv]=Gränssnitt för Java-avlusare
 Comment[ta]=ஜாவா டிபக்கர் முன்நிருந்த
 Comment[xx]=xxJava Debugger Frontendxx
 Comment[zh_CN]=Java调试器前端
 Name=KDevJavaDebugger
 Name[de]=Java-Debugger (KDevelop)
+Name[pl]=KDevDebugerJavy
 Name[sv]=KDevelop Java-avlusare
 Name[ta]=கெடெவ் ஜாவா டிபக்கர்
 Name[xx]=xxKDevJavaDebuggerxx
@@ -35,10 +38,12 @@ GenericName[fr]=Interface du débogueur Java
 GenericName[hu]=grafikus Java-nyomkövető
 GenericName[it]=Interfaccia per il debugger di Java
 GenericName[nl]=Schil voor Java-debugger
+GenericName[pl]=Interfejs do debugera Javy
 GenericName[pt]=Interface de Depuração para Java
 GenericName[pt_BR]=Frontend do Depurador Java
 GenericName[ru]=Интегрированный отладчик Java
 GenericName[sr]=Сучеље за проналажење грешака у Java програмима
+GenericName[sr@Latn]=Sučelje za pronalaženje grešaka u Java programima
 GenericName[sv]=Gränssnitt för Java-avlusare
 GenericName[ta]=ஜாவா டிபக்கர் முன்நிருந்த
 GenericName[xx]=xxJava Debugger Frontendxx
