--- a/languages/pascal/compiler/dccoptions/kdevdccoptions.desktop
+++ b/languages/pascal/compiler/dccoptions/kdevdccoptions.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Compilateur Delphi de Borland
 Comment[hu]=Borland Delphi fordítóprogram
 Comment[it]=Compilatore per Borland Delphi
 Comment[nl]=Borland Delphi-compiler
+Comment[pl]=Kompilator Borland Delphi
 Comment[pt]=Compilador de Borland Delphi
 Comment[pt_BR]=Compilador Delphi da Borland Delphi
 Comment[ru]=Компилятор Borland Delphi
 Comment[sr]=Borland-ов Delphi компајлер
+Comment[sr@Latn]=Borland-ov Delphi kompajler
 Comment[sv]=Borland Delphi kompilator
 Comment[ta]=பொர்லான்ட் டெல்பி தொகுப்பி
 Comment[xx]=xxBorland Delphi Compilerxx
 Comment[zh_CN]=Borland Delphi编译器
 Name=DccOptions
 Name[de]=Delphi-Einstellungen (KDevelop)
+Name[pl]=Opcje Dcc
 Name[sv]=Alternativ för dcc
 Name[ta]=Dccவிருப்பத்தேர்வுகள் 
 Name[xx]=xxDccOptionsxx
