--- a/languages/perl/kdevperlsupport.desktop
+++ b/languages/perl/kdevperlsupport.desktop
@@ -12,17 +12,20 @@ Comment[fr]=Un module externe pour la gestion du langage PERL.
 Comment[hu]=Perl-támogatás
 Comment[it]=Supporto Perl
 Comment[nl]=Ondersteuning voor Perl
+Comment[pl]=Obsługa Perla
 Comment[pt]=Suporte a Perl
 Comment[pt_BR]=Suporte ao Perl
 Comment[ru]=Поддержка языка Perl
 Comment[sl]=Podpora perl
 Comment[sr]=Подршка за Perl
+Comment[sr@Latn]=Podrška za Perl
 Comment[sv]=Perl-stöd
 Comment[ta]=பெர்ல் ஆதரவு
 Comment[xx]=xxPerl Supportxx
 Comment[zh_CN]=Perl语言支持
 Name=KDevPerlSupport
 Name[de]=Perl-Sprachunterstützung (KDevelop)
+Name[pl]=KDevObsługaPerla
 Name[sv]=KDevelop Perl-stöd
 Name[ta]=கெடெவ் பெர்ல் ஆதரவு
 Name[xx]=xxKDevPerlSupportxx
@@ -36,11 +39,13 @@ GenericName[fr]=Langage PERL
 GenericName[hu]=Perl-támogatás
 GenericName[it]=Supporto per Perl
 GenericName[nl]=Ondersteuning voor Perl
+GenericName[pl]=Obsługa Perla
 GenericName[pt]=Suporte a Perl
 GenericName[pt_BR]=Suporte ao Perl
 GenericName[ru]=Поддержка языка Perl
 GenericName[sl]=Podpora perl
 GenericName[sr]=Подршка за Perl
+GenericName[sr@Latn]=Podrška za Perl
 GenericName[sv]=Perl-stöd
 GenericName[ta]=பெர்ல் ஆதரவு
 GenericName[xx]=xxPerl Supportxx
