--- a/languages/php/kdevphpsupport.desktop
+++ b/languages/php/kdevphpsupport.desktop
@@ -12,17 +12,20 @@ Comment[fr]=Un module externe pour la gestion du langage PHP.
 Comment[hu]=PHP-támogatás
 Comment[it]=Supporto per PHP
 Comment[nl]=Ondersteuning voor PHP
+Comment[pl]=Obsługa PHP
 Comment[pt]=Suport a PHP
 Comment[pt_BR]=Suporte ao PHP
 Comment[ru]=Поддержка языка PHP
 Comment[sl]=Podpora PHP
 Comment[sr]=Подршка за PHP
+Comment[sr@Latn]=Podrška za PHP
 Comment[sv]=PHP-stöd
 Comment[ta]=பிஎச்பிஆதரவு
 Comment[xx]=xxPHP Supportxx
 Comment[zh_CN]=PHP语言支持
 Name=KDevPHPSupport
 Name[de]=PHP-Sprachunterstützung (KDevelop)
+Name[pl]=KDevObsługaPHP
 Name[sv]=KDevelop PHP-stöd
 Name[ta]=கெடெவ் பிஎச்பி ஆதரவு
 Name[xx]=xxKDevPHPSupportxx
@@ -36,10 +39,12 @@ GenericName[fr]=Langage PHP
 GenericName[hu]=PHP-támogatás
 GenericName[it]=Supporto per PHP
 GenericName[nl]=Ondersteuning voor PHP
+GenericName[pl]=Obsługa PHP
 GenericName[pt]=Suporte a PHP
 GenericName[pt_BR]=Suporte ao PHP
 GenericName[ru]=Поддержка языка PHP
 GenericName[sr]=Подршка за PHP
+GenericName[sr@Latn]=Podrška za PHP
 GenericName[sv]=PHP-stöd
 GenericName[ta]=பிஎச்பி ஆதரவு
 GenericName[xx]=xxPHP Supportxx
