--- a/languages/ruby/kdevrubysupport.desktop
+++ b/languages/ruby/kdevrubysupport.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Un module externe pour la gestion du langage RUBY.
 Comment[hu]=Ruby-támogatás
 Comment[it]=Supporto per Ruby
 Comment[nl]=Ondersteuning voor Ruby
+Comment[pl]=Obsługa: Ruby
 Comment[pt]=Suporte a Ruby
 Comment[pt_BR]=Suporte ao Ruby
 Comment[ru]=Поддержка языка Ruby
 Comment[sr]=Подршка за Ruby
+Comment[sr@Latn]=Podrška za Ruby
 Comment[sv]=Ruby-stöd
 Comment[ta]=ருபி ஆதரவு
 Comment[xx]=xxRuby Supportxx
 Comment[zh_CN]=Ruby语言支持
 Name=KDevRubySupport
 Name[de]=Ruby-Sprachunterstützung (KDevelop)
+Name[pl]=KDevObsługaRuby
 Name[sv]=KDevelop Ruby-stöd
 Name[ta]=கெடெவ் ருபி ஆதரவு
 Name[xx]=xxKDevRubySupportxx
@@ -35,10 +38,12 @@ GenericName[fr]=Langage RUBY
 GenericName[hu]=Ruby-támogatás
 GenericName[it]=Supporto a Ruby
 GenericName[nl]=Ondersteuning voor Ruby
+GenericName[pl]=Obsługa: Ruby
 GenericName[pt]=Suporte a Ruby
 GenericName[pt_BR]=Suporte ao Ruby
 GenericName[ru]=Поддержка языка Ruby
 GenericName[sr]=Подршка за Ruby
+GenericName[sr@Latn]=Podrška za Ruby
 GenericName[sv]=Ruby-stöd
 GenericName[ta]=ருபி ஆதரவு
 GenericName[xx]=xxRuby Supportxx
