--- a/languages/sql/kdevsqlsupport.desktop
+++ b/languages/sql/kdevsqlsupport.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Un module externe pour la gestion du langage SQL.
 Comment[hu]=SQL-támogatás
 Comment[it]=Supporto SQL
 Comment[nl]=Ondersteuning voor SQL
+Comment[pl]=Obsługa SQL-a
 Comment[pt]=Suporte a SQL
 Comment[pt_BR]=Suporte ao SQL
 Comment[ru]=Поддержка языка SQL
 Comment[sr]=Подршка за SQL
+Comment[sr@Latn]=Podrška za SQL
 Comment[sv]=SQL-stöd
 Comment[ta]=SQL  ஆதரவு
 Comment[xx]=xxSQL Supportxx
 Comment[zh_CN]=SQL语言支持
 Name=KDevSQLSupport
 Name[de]=SQL-Sprachunterstützung (KDevelop)
+Name[pl]=KDevObsługaSQL
 Name[sv]=KDevelop SQL-stöd
 Name[ta]=கெடெவ் எஸ்கியேல் ஆதரவு
 Name[xx]=xxKDevSQLSupportxx
@@ -35,10 +38,12 @@ GenericName[fr]=Langage SQL
 GenericName[hu]=SQL-támogatás
 GenericName[it]=Supporto SQL
 GenericName[nl]=Ondersteuning voor SQL
+GenericName[pl]=Obsługa SQL-a
 GenericName[pt]=Suporte a SQL
 GenericName[pt_BR]=Suporte ao SQL
 GenericName[ru]=Поддержка языка SQL
 GenericName[sr]=Подршка за SQL
+GenericName[sr@Latn]=Podrška za SQL
 GenericName[sv]=SQL-stöd
 GenericName[ta]=SQL  ஆதரவு
 GenericName[xx]=xxSQL Supportxx
