--- a/lib/interfaces/kdevelopappfrontend.desktop
+++ b/lib/interfaces/kdevelopappfrontend.desktop
@@ -13,10 +13,12 @@ Name[fr]=Interface graphique pour application
 Name[hu]=Alkalmazáskezelési felület
 Name[it]=Applicazione per le interfacce
 Name[nl]=Toepassing frontend-interface
+Name[pl]=Interfejs do aplikacji
 Name[pt]=Interface da aplicação
 Name[pt_BR]=Interface frontend para aplicativos
 Name[ru]=Интерфейс менеджера приложений
 Name[sr]=Интерфејс сучеља програма
+Name[sr@Latn]=Interfejs sučelja programa
 Name[sv]=Programgränssnitt
 Name[ta]=ஆப் முன்நிருந்த இடைமுகம்
 Name[xx]=xxApp frontend interfacexx
