--- a/lib/interfaces/kdevelopdifffrontend.desktop
+++ b/lib/interfaces/kdevelopdifffrontend.desktop
@@ -13,10 +13,12 @@ Name[fr]=Interface du programme « Diff »
 Name[hu]=Diff-kezelési felület
 Name[it]=Interfaccia a Diff
 Name[nl]=Diff Frontend-interface
+Name[pl]=Interfejs do programu diff 
 Name[pt]=Interface para o 'Diff'
 Name[pt_BR]=Interface de Frontend do Diff
 Name[ru]=Интерфейс системы нахождения различий
 Name[sr]=Интерфејс diff сучеља
+Name[sr@Latn]=Interfejs diff sučelja
 Name[sv]=Gränssnitt för jämförelse
 Name[ta]=டிப் முன்நிருந்த இடைமுகம் 
 Name[xx]=xxDiff Frontend Interfacexx
