--- a/lib/interfaces/kdevelopmakefrontend.desktop
+++ b/lib/interfaces/kdevelopmakefrontend.desktop
@@ -13,10 +13,12 @@ Name[fr]=Interface du programme « make »
 Name[hu]=Make kezelőfelület
 Name[it]=Interfaccia per Make
 Name[nl]=Make Frontend-interface
+Name[pl]=Interfejs do Make
 Name[pt]=Interface para o Make
 Name[pt_BR]=Interface de Frontend do Make
 Name[ru]=Интерфейс оболочки Make
 Name[sr]=Интерфејс сучеља справљача
+Name[sr@Latn]=Interfejs sučelja spravljača
 Name[sv]=Byggränssnitt
 Name[ta]=முன் பகுதி இடை விளிம்பை அமை
 Name[xx]=xxMake Frontend Interfacexx
