--- a/lib/interfaces/kdeveloppcsimporter.desktop
+++ b/lib/interfaces/kdeveloppcsimporter.desktop
@@ -12,10 +12,12 @@ Name[et]=KDevelopi PCS importija
 Name[fr]=Importateur PCS de KDevelop
 Name[hu]=KDevelop PCS-importáló
 Name[nl]=KDevelop PCS importeren
+Name[pl]=KDevelop: import PCS
 Name[pt]=Importador de PCS do KDevelop
 Name[pt_BR]=Importador PCS para o KDevelop
 Name[ru]=Загрузчик в хранилище классов
 Name[sr]=KDevelop-ов PCS увозник
+Name[sr@Latn]=KDevelop-ov PCS uvoznik
 Name[sv]=KDevelop PCS-import
 Name[ta]=KDevelop  pcs ஏற்றுமதியாளர்
 Name[xx]=xxKDevelop PCS Importerxx
