--- a/lib/interfaces/kdevelopproject.desktop
+++ b/lib/interfaces/kdevelopproject.desktop
@@ -13,10 +13,12 @@ Name[fr]=Interface de projet de KDevelop
 Name[hu]=KDevelop projektkezelő felület
 Name[it]=Interfaccia KDevelop di progetto
 Name[nl]=KDevelop Projectinterface
+Name[pl]=Interfejs KDevelopa do projektu
 Name[pt]=Interface de Projecto do KDevelop
 Name[pt_BR]=Interface de Projeto do KDevelop
 Name[ru]=Интерфейс проекта
 Name[sr]=KDevelop-ов интерфејс пројекта
+Name[sr@Latn]=KDevelop-ov interfejs projekta
 Name[sv]=KDevelop projektgränssnitt
 Name[ta]=KDevelop திட்ட இடைஇணைப்பு
 Name[xx]=xxKDevelop Project Interfacexx
