--- a/lib/interfaces/kdevelopsourceformatter.desktop
+++ b/lib/interfaces/kdevelopsourceformatter.desktop
@@ -13,10 +13,12 @@ Name[fr]=Interface de formatage de code source
 Name[hu]=Forrásformázási felület
 Name[it]=Interfaccia per il formattatore del codice sorgente
 Name[nl]=Broncode formatteren-interface
+Name[pl]=Interfejs do programu formatowania źródeł
 Name[pt]=Interface de formatação de código
 Name[pt_BR]=Interface de formatação de fonte
 Name[ru]=Интерфейс форматировщика исходного кода
 Name[sr]=Интерфејс форматера изворног кода
+Name[sr@Latn]=Interfejs formatera izvornog koda
 Name[sv]=Gränssnitt för källkodsformatering
 Name[ta]=வடிவைம்பவரின் இடை விளிம்பு முலம்
 Name[xx]=xxSource formatter interfacexx
