--- a/mimetypes/x-fortran.desktop
+++ b/mimetypes/x-fortran.desktop
@@ -10,10 +10,12 @@ Comment[fr]=Fichier source Fortran
 Comment[hu]=Fortran forrásfájl
 Comment[it]=File sorgente per Fortran
 Comment[nl]=Fortran Bronbestand
+Comment[pl]=Plik źródłowy Fortrana
 Comment[pt]=Ficheiro de Código em Fortran
 Comment[pt_BR]=Arquivo Fonte do Fortran
 Comment[ru]=Исходный файл Fortran
 Comment[sr]=Fortran изворни фајл
+Comment[sr@Latn]=Fortran izvorni fajl
 Comment[sv]=Fortran källkodsfil
 Comment[ta]=Fortran மூலக்கோப்பு
 Comment[xx]=xxFortran Source Filexx
