--- a/parts/astyle/kdevpart_astyle.desktop
+++ b/parts/astyle/kdevpart_astyle.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Un module externe pour le formatage des sources d'un programme. Ce m
 Comment[hu]=Bővítőmodul forráskód formázásához, megadott szabályok alapján. Az Eszközök menüből érhető el, ha be van töltve.
 Comment[it]=Un plugin per formattare il codice sorgente secondo uno specifico insieme di regole. Quando sarà caricato lo troverai nel menu Strumenti.
 Comment[nl]=Een plugin om broncode te formatteren volgens een speciale set regels. Te vinden onder het menu Gereedschap.
+Comment[pl]=Wtyczka do formatowanie kodu źródłowego zgodnie z podanymi zasadami. Po załadowaniu pojawia się w menu Narzędzia.
 Comment[pt]=Um 'plugin' para a formatação do código-fonte de acordo com um conjunto específico de regras. Quando é carregado, encontrar-se-á no menu Ferramentas.
 Comment[pt_BR]=Um plugin para formatação do código fonte de acordo com um conjunto específico de regras. Quando carregado é encontrado no menu Ferramentas.
 Comment[ru]=Модуль для форматирования кода по установленным правилам.
-Comment[sr]=Додатак за форматирање изворног кôда према прецизираном скупу правила. Када је учитан, налази се у менију „Алати“.
+Comment[sr]=Прикључак за форматирање изворног кôда према прецизираном скупу правила. Када је учитан, налази се у менију „Алати“.
+Comment[sr@Latn]=Priključak za formatiranje izvornog kôda prema preciziranom skupu pravila. Kada je učitan, nalazi se u meniju „Alati“.
 Comment[sv]=Ett insticksprogram för att formatera källkod enligt en given uppsättning regler. När det laddats finns det i verktygsmenyn.
 Comment[ta]=மூல குறிமுறை வடிவத்தை மாற்றும் சொருகிக்கு சில குறிப்பிட்ட விதிமுறைகள் உள்ளது.எற்றியபின் இதனை கருவி பட்டியில் காணலாம்.
 Comment[xx]=xxA plugin for formatting of sourcecode according to a specified set of rules. When loaded it is found in the Tools menu.xx
 Comment[zh_CN]=一个按照指定规则格式化源代码的插件。启动后显示在工具菜单。
 Name=KDevAStyle
 Name[de]=Artistic-Style-Unterstützung (KDevelop)
+Name[pl]=KDevStylA
 Name[sv]=KDevelop A-stil
 Name[xx]=xxKDevAStylexx
 GenericName=Source Code Formatter
@@ -34,10 +37,12 @@ GenericName[fr]=Formatage de code source
 GenericName[hu]=Forráskód-formázó
 GenericName[it]=Formattatore del codice sorgente
 GenericName[nl]=Broncode formatteren
+GenericName[pl]=Formatowanie kodu źródłowego
 GenericName[pt]=Formatador de Código Fonte
 GenericName[pt_BR]=Formatador de Código Fonte
 GenericName[ru]=Форматировщик исходного кода
 GenericName[sr]=Форматер изворног кода
+GenericName[sr@Latn]=Formater izvornog koda
 GenericName[sv]=Källkodsformatering
 GenericName[ta]=மூல குறியை வடிவமைப்பவர்
 GenericName[xx]=xxSource Code Formatterxx
