--- a/parts/buglist/kdevbuglist.desktop
+++ b/parts/buglist/kdevbuglist.desktop
@@ -10,10 +10,12 @@ Comment[fr]=Un module externe pour la recherche de bogues dans une application.
 Comment[hu]=Hibanyilvántartó alkalmazás
 Comment[it]=Applicazione per la raccolta dei bug
 Comment[nl]=Toepassing voor het bijhouden van bugs
+Comment[pl]=Aplikacja do śledzenia błędów
 Comment[pt]=Aplicação de Gestão de Erros
 Comment[pt_BR]=Aplicativo de Rastreamento de Erro
 Comment[ru]=Обработка списка ошибок
 Comment[sr]=Програм за праћење грешака
+Comment[sr@Latn]=Program za praćenje grešaka
 Comment[sv]=Program för att spåra fel
 Comment[ta]=பிழை காணும் பயன்பாடு
 Comment[xx]=xxBug Tracking Applicationxx
@@ -22,6 +24,7 @@ Exec=blubb
 Icon=find
 Name=KDevBugList
 Name[de]=Fehlerverfolgung-Unterstützung (KDevelop)
+Name[pl]=KDevListaBłędów
 Name[sv]=KDevelop fellista
 Name[xx]=xxKDevBugListxx
 GenericName=Bug Tracking Application
@@ -34,10 +37,12 @@ GenericName[fr]=Recherche de bogues
 GenericName[hu]=hibanyilvántartó
 GenericName[it]=Applicazione per tracciare i bug
 GenericName[nl]=Programma voor bugtracking
+GenericName[pl]=Aplikacja do śledzenia błędów
 GenericName[pt]=Aplicação de Gestão de Erros
 GenericName[pt_BR]=Aplicativo de Rastreamento de Erro
 GenericName[ru]=Обработка списка ошибок
 GenericName[sr]=Програм за праћење грешака
+GenericName[sr@Latn]=Program za praćenje grešaka
 GenericName[sv]=Program för att spåra fel
 GenericName[ta]=பிழை காணும் பயன்பாடு 
 GenericName[xx]=xxBug Tracking Applicationxx
