--- a/parts/ctags/kdevctags.desktop
+++ b/parts/ctags/kdevctags.desktop
@@ -12,10 +12,12 @@ Comment[fr]=Le programme « CTags » est un outils de référencement de sources
 Comment[hu]=A CTags egy többféle nyelvet is támogató forrásnavigációs eszköz. Lehetővé teszi felbukkanó menüből típusdeklarációk és -megvalósítások keresését, lekérdezését (az Eszköz menüből érhető el). http://ctags.sourceforge.net/
 Comment[it]=CTags è uno strumento per la navigazione nel codice sorgente con supporto per molti linguaggi. Quando caricato offre un menu contestuale per ricercare i tipi di dichiarazioni/definizioni e anche una finestra per compiere interrogazioni nel menu Strumenti. http://ctags.sourceforge.net/
 Comment[nl]=CTags is een krachtige tool voor het navigeren in broncode met ondersteuning voor veel talen. Wanneer de plugin geladen is biedt deze een contextmenu voor het vinden van typedeclaraties, en ook een optie in het menu Gereedschap. Web: http://ctags.sourceforge.net/
+Comment[pl]=CTags to narzędzie do nawigacji w kodzie źródłowym z obsługą wielu języków. Po załadowaniu udostępnia menu kontekstowe pozwalające znajdować deklaracje/definicje oraz okno dialogowe w menu Narzędzia. http://ctags.sourceforge.net/
 Comment[pt]=O CTags é uma ferramenta de navegação no código com suporte para várias linguagens. Quando é carregado, oferece um menu de contexto para encontrar as declarações/definições de tipos, assim como uma janela de pesquisa no menu de Ferramentas. http://ctags.sourceforge.net/
 Comment[pt_BR]=CTags é uma ferramenta de navegação de código com suporte para muitas linguagens. Quando carregada ela oferece um menu de contexto para encontrar declarações/definições de tipo e também um diálogo de consulta no menu Ferramentas. http://ctags.sourceforge.net/
 Comment[ru]=CTags - это средство навигации по коду, поддерживающее многие языки. Будучи загружено, оно предоставляет контекстное меню для нахождения описания и определения типа выбранного символа и также диалог запроса. http://ctags.sourceforge.net/
 Comment[sr]=CTags је алат за навигацију кроз изворни кôд са подршком за многе језике. Када је учитан, обезбеђује контекстни мени за проналажење декларација/дефиниција типова, а такође и дијалог за упите у менију „Алати“. http://ctags.sourceforge.net/
+Comment[sr@Latn]=CTags je alat za navigaciju kroz izvorni kôd sa podrškom za mnoge jezike. Kada je učitan, obezbeđuje kontekstni meni za pronalaženje deklaracija/definicija tipova, a takođe i dijalog za upite u meniju „Alati“. http://ctags.sourceforge.net/
 Comment[sv]=Ctags är ett verktyg för källkodsnavigering med stöd för många språk. När det laddats tillhandahåller det en sammanhangsberoende meny för att hitta typdeklarationer eller definitioner, och dessutom en frågedialogruta i verktygsmenyn. http://ctags.sourceforge.net/
 Comment[ta]=CTags இது ஒரு மூல வழி செலுத்தும் கருவி இது நிறைய மொழிகளை அதறிக்கும்.ஏற்றும் பொழுது ஏழுத்து உருவை காண உதவும் ஒரு பட்டியலும் மற்றும் கருவி பட்டியலில் கேள்வி உறையாடல்களும் இது அளிக்கும்.http://ctags.sourceforge.net/
 Comment[xx]=xxCTags is a source navigation tool with support for many languages. When loaded it provides a context menu for finding type declarations/definitions and also a query dialog in the Tools menu. http://ctags.sourceforge.net/xx
@@ -34,10 +36,12 @@ GenericName[fr]=Interface pour CTags
 GenericName[hu]=CTags-kezelő
 GenericName[it]=Interfaccia a CTags
 GenericName[nl]=Frontend voor CTags
+GenericName[pl]=Interfejs do CTags
 GenericName[pt]=Interface do CTags
 GenericName[pt_BR]=Frontend do CTags
 GenericName[ru]=Интерфейс к CTags
 GenericName[sr]=Интерфејс CTags-а
+GenericName[sr@Latn]=Interfejs CTags-a
 GenericName[sv]=Ctags-gränssnitt
 GenericName[ta]=CTags முன்பகுதி
 GenericName[xx]=xxCTags Frontendxx
