--- a/parts/diff/kdevdiff.desktop
+++ b/parts/diff/kdevdiff.desktop
@@ -12,10 +12,12 @@ Comment[fr]=Un module externe pour la gestion de l'afficheur de différences.
 Comment[hu]=Fájlok közötti eltérések megjelenítése
 Comment[it]=Visualizzatore di differenze
 Comment[nl]=Weergave van verschillen
+Comment[pl]=Przeglądarka różnic
 Comment[pt]=Visualizador de Diferenças
 Comment[pt_BR]=Visualizador de Diferenças
 Comment[ru]=Просмотрщик различий
 Comment[sr]=Програм за прегледање разлика
+Comment[sr@Latn]=Program za pregledanje razlika
 Comment[sv]=Visning av jämförelser
 Comment[ta]=பாகுபாடு காட்சியாளர்
 Comment[xx]=xxDifference Viewerxx
@@ -34,10 +36,12 @@ GenericName[fr]=Afficheur de différences
 GenericName[hu]=diff-megjelenítő
 GenericName[it]=Visualizzatore delle differenze
 GenericName[nl]=Weergave van verschillen
+GenericName[pl]=Przeglądarka różnic
 GenericName[pt]=Visualizador de Diferenças
 GenericName[pt_BR]=Visualizador de Diferenças
 GenericName[ru]=Просмотр различий
 GenericName[sr]=Програм за прегледање разлика
+GenericName[sr@Latn]=Program za pregledanje razlika
 GenericName[sv]=Visning av jämförelser
 GenericName[ta]=வெவ்வேறு பாற்வையாளர்கள்
 GenericName[xx]=xxDifference Viewerxx
