--- a/parts/doctreeview/chm/kchmpart.desktop
+++ b/parts/doctreeview/chm/kchmpart.desktop
@@ -11,10 +11,12 @@ Comment[fr]=Visionneur intégré d'aide HTML
 Comment[hu]=Beágyazható HTML-es dokumentációnézegető
 Comment[it]=Visualizzatore integrabile per la guida HTML
 Comment[nl]=Ingebedde HTML Helpweergave
+Comment[pl]=Wbudowywalna przeglądarka pomocy w formacie HTML
 Comment[pt]=Visualizador de HTMLHelp Embebível
 Comment[pt_BR]=Visualizador de Ajuda HTML Embutido
 Comment[ru]=Встроенный просмотр HTMLHelp
 Comment[sr]=Уградиви приказивач HTMLHelp-а
+Comment[sr@Latn]=Ugradivi prikazivač HTMLHelp-a
 Comment[sv]=Inbäddningsbar HTML-hjälpvisning
 Comment[ta]=HTML உதவி பாற்வையாளரை உட்பொதி
 Comment[xx]=xxEmbeddable HTMLHelp Viewerxx
@@ -22,6 +24,7 @@ Comment[zh_CN]=嵌入的HTML帮助查看器
 MimeType=application/chm
 Name=KChmPart
 Name[de]=Chm-Betrachter (KDevelop)
+Name[pl]=Program KChm
 Name[sv]=Kchm-del
 Name[xx]=xxKChmPartxx
 ServiceTypes=KParts/ReadOnlyPart,Browser/View
