--- a/parts/filecreate/kdevpart_filecreate.desktop
+++ b/parts/filecreate/kdevpart_filecreate.desktop
@@ -10,15 +10,18 @@ Comment[fr]=Un module externe pour la création de fichier.
 Comment[hu]=Fájl létrehozása
 Comment[it]=Crea file
 Comment[nl]=Bestand aanmaken
+Comment[pl]=Tworzenie pliku
 Comment[pt]=Criação de Ficheiros
 Comment[ru]=Мастер создания файлов
 Comment[sr]=Направи фајл
+Comment[sr@Latn]=Napravi fajl
 Comment[sv]=Skapa filer
 Comment[ta]= கோப்பு உருவாக்கப்பட்டது
 Comment[xx]=xxFileCreatexx
 Comment[zh_CN]=文件创建
 Name=KDevFileCreate
 Name[de]=Dateierstellungs-Komponente (KDevelop)
+Name[pl]=KDevTworzeniePliku
 Name[sv]=KDevelop skapa filer
 Name[ta]=KDev உருவாக்கப்பட்ட கோப்பு
 Name[xx]=xxKDevFileCreatexx
@@ -30,9 +33,11 @@ GenericName[fr]=Création de fichier
 GenericName[hu]=fájllétrehozás
 GenericName[it]=Crea file
 GenericName[nl]=Bestand aanmaken
+GenericName[pl]=Tworzenie pliku
 GenericName[pt]=Criação de Ficheiros
 GenericName[ru]=Мастер создания файлов
 GenericName[sr]=Направи фајл
+GenericName[sr@Latn]=Napravi fajl
 GenericName[sv]=Skapa filer
 GenericName[ta]=கோப்பு உருவக்கம்
 GenericName[xx]=xxFileCreatexx
