--- a/parts/outputviews/kdevappoutputview.desktop
+++ b/parts/outputviews/kdevappoutputview.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Un module externe pour la gestion de l'affichage des messages texte 
 Comment[hu]=Alkalmazáskimenet-megjelenítő
 Comment[it]=Vista dell'output dell'applicazione
 Comment[nl]=Weergave van toepassingsuitvoer
+Comment[pl]=Widok wyjścia aplikacji
 Comment[pt]=Vista do Resultado da Aplicação
 Comment[pt_BR]=Visão da Saída do Aplicativo
 Comment[ru]=Окно вывода приложения
 Comment[sr]=Приказ излаза апликације
+Comment[sr@Latn]=Prikaz izlaza aplikacije
 Comment[sv]=Programutmatningsvy
 Comment[ta]=பயன்பாட்டு வெளியீட்டுக்காட்சி
 Comment[xx]=xxApplication Output Viewxx
 Comment[zh_CN]=应用程序输出查看器
 Name=KDevAppOutputView
 Name[de]=Anwendungsausgabe (KDevelop)
+Name[pl]=KDevAppWidokWyjścia
 Name[sv]=KDevelop programutmatningsvy
 Name[ta]=KDevApp வெளியீட்டுக்காட்சி
 Name[xx]=xxKDevAppOutputViewxx
@@ -35,10 +38,12 @@ GenericName[fr]=Messages d'une application
 GenericName[hu]=alkalmazáskimenet-megjelenítő
 GenericName[it]=Visualizza l'output dell'applicazione
 GenericName[nl]=Weergave van toepassingsuitvoer
+GenericName[pl]=Widok wyjścia aplikacji
 GenericName[pt]=Vista do Resultado da Aplicação
 GenericName[pt_BR]=Visão da Saída do Aplicativo
 GenericName[ru]=Окно вывода приложения
 GenericName[sr]=Приказ излаза апликације
+GenericName[sr@Latn]=Prikaz izlaza aplikacije
 GenericName[sv]=Programutmatningsvy
 GenericName[ta]=பயன்பாட்டுவெளியீட்டுக்காட்சி
 GenericName[xx]=xxApplication Output Viewxx
