--- a/parts/outputviews/kdevmakeview.desktop
+++ b/parts/outputviews/kdevmakeview.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Un module externe pour la gestion de l'interface avec un compilateur
 Comment[hu]=Grafikus kezelőprogram fordítóprogramokhoz
 Comment[it]=Interfaccia al compilatore
 Comment[nl]=Compiler-frontend
+Comment[pl]=Interfejs do kompilatora
 Comment[pt]=Interface de Compilador
 Comment[pt_BR]=Frontend do Compilador
 Comment[ru]=Интерфейс к компилятору
 Comment[sr]=Сучеље компајлера
+Comment[sr@Latn]=Sučelje kompajlera
 Comment[sv]=Kompilatorgränssnitt
 Comment[ta]=முன் பகுதி தொகுப்பி
 Comment[xx]=xxCompiler Frontendxx
 Comment[zh_CN]=编译器前端
 Name=KDevMakeView
 Name[de]=Make-Ausgabe (KDevelop)
+Name[pl]=KDevWIdokMake
 Name[sv]=KDevelop byggvy
 Name[ta]=KDev காட்சியாக்கு
 Name[xx]=xxKDevMakeViewxx
@@ -35,10 +38,12 @@ GenericName[fr]=Interface pour compilateur
 GenericName[hu]=grafikus kezelőfelület fordítóprogramokhoz
 GenericName[it]=Interfaccia al compilatore
 GenericName[nl]=Compiler-frontend
+GenericName[pl]=Interfejs do kompilatora
 GenericName[pt]=Interface de Compilador
 GenericName[pt_BR]=Frontend do Compilador
 GenericName[ru]=Интерфейс к компилятору
 GenericName[sr]=Сучеље компајлера
+GenericName[sr@Latn]=Sučelje kompajlera
 GenericName[sv]=Kompilatorgränssnitt
 GenericName[ta]=முன் பகுதி தொகுப்பி
 GenericName[xx]=xxCompiler Frontendxx
