--- a/parts/quickopen/kdevpart_quickopen.desktop
+++ b/parts/quickopen/kdevpart_quickopen.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Un module externe de recherche et d'ouverture de fichiers pour les g
 Comment[hu]=Segítséget nyújt nagy projekteknél fájlok kereséséhez, megnyitásához. Betöltéskor a Fájl menübe kerül.
 Comment[it]=Offre una via efficiente per trovare/aprire file in un progetto di ampia dimensione. Appare nel menu File quando caricato.
 Comment[nl]=Biedt een snelle manier om bestanden te vinden/openen in een groot project. Verschijnt in menu Bestand.
+Comment[pl]=Umożliwia wyszukiwanie/otwieranie plików w dużym projekcie. Po załadowaniu pojawia się w menu Plik.
 Comment[pt]=Oferece uma forma eficiente de procurar ou abrir os ficheiros num projecto grande. Aparece no menu Ficheiro quando é carregado.
 Comment[pt_BR]=Fornece uma maneira de procurar/abrir arquivos num grande projeto. Aparece no menu Arquivo quando carregado.
 Comment[ru]=Предоставляет эффективное средство нахождения и открытия файлов и классов в больших проектах.
 Comment[sr]=Обезбеђује ефикасан начин проналажења/отварања фајлова у великом пројекту. Појављује се у менију „Фајл“ када је учитан.
+Comment[sr@Latn]=Obezbeđuje efikasan način pronalaženja/otvaranja fajlova u velikom projektu. Pojavljuje se u meniju „Fajl“ kada je učitan.
 Comment[sv]=Erbjuder ett effektivt sätt att hitta och öppna filer i ett stort projekt. Finns i menyn Arkiv när det laddats.
 Comment[ta]=பெறிய திட்ட பணிகளில் உள்ள கோப்பினை திறக்க/தேட இது ஒரு நல்ல வழியை தரும்.ஏற்றியபின் கோப்பு பட்டியலில் இது தோண்றும்.
 Comment[xx]=xxProvides an efficient way of finding/opening files in a large project. Appears in the File menu when loaded.xx
 Comment[zh_CN]=提供在大项目中查找/打开文件的有效方法。启动后显示在文件菜单中。
 Name=KDevQuickOpen
 Name[de]=Schnellöffner-Komponente (KDevelop)
+Name[pl]=KDevSzybkieOtwarcie
 Name[sv]=KDevelop snabböppna
 Name[ta]=KDev சீக்கிரம் திற
 Name[xx]=xxKDevQuickOpenxx
@@ -34,9 +37,11 @@ GenericName[fr]=Ouverture rapide
 GenericName[hu]=gyors fájlmegnyitó
 GenericName[it]=Apertura rapida
 GenericName[nl]=Snel openen
+GenericName[pl]=Szybkie otwarcie
 GenericName[pt]=Abertura Rápida
 GenericName[ru]=Быстрое открытие
 GenericName[sr]=Брзо отварање
+GenericName[sr@Latn]=Brzo otvaranje
 GenericName[sv]=Snabböppna
 GenericName[ta]=சீக்கிரம் திற
 GenericName[xx]=xxQuickOpenxx
