--- a/vcs/cervisia/kdevcervisia.desktop
+++ b/vcs/cervisia/kdevcervisia.desktop
@@ -12,11 +12,13 @@ Comment[fr]=Un module externe intégrant le programme « Cervisia ».
 Comment[hu]=Cervisia-integráció
 Comment[it]=Integrazione per Cervisia
 Comment[nl]=Cervisia integratie
+Comment[pl]=Integracja z Cervisią
 Comment[pt]=Integração com Cervisia
 Comment[pt_BR]=Integração com o Cervisia
 Comment[ru]=Интеграция Cervisia
 Comment[sl]=Integracija Cervisie
 Comment[sr]=Интеграција Cervisia-је
+Comment[sr@Latn]=Integracija Cervisia-je
 Comment[sv]=Integrering av Cervisia
 Comment[ta]=Cervisia ஒருங்கிணைத்தல் 
 Comment[xx]=xxCervisia Integrationxx
@@ -25,6 +27,7 @@ Name=CervisiaPart
 Name[de]=Cervisia-Unterstützung
 Name[et]=Cervisia komponent
 Name[hu]=Cervisia objektum
+Name[pl]=Element Cervisii
 Name[pt_BR]=Parte Cervisia
 Name[sv]=Cervisiadel
 Name[ta]=Cervisia பகுதி
@@ -39,11 +42,13 @@ GenericName[fr]=Intégration de « Cervisia »
 GenericName[hu]=Cervisia-integráció
 GenericName[it]=Integrazione Cervisia
 GenericName[nl]=Cervisia-integratie
+GenericName[pl]=Integracja z Cervisią
 GenericName[pt]=Integração com o Cervisia
 GenericName[pt_BR]=Integração com o Cervisia
 GenericName[ru]=Интеграция Cervisia
 GenericName[sl]=Integracija Cervisie
 GenericName[sr]=Интеграција Cervisia-је
+GenericName[sr@Latn]=Integracija Cervisia-je
 GenericName[sv]=Integrering av Cervisia
 GenericName[ta]=Cervisia ஒருங்கிணைத்தல் 
 GenericName[xx]=xxCervisia Integrationxx
