--- a/vcs/perforce/kdevperforce.desktop
+++ b/vcs/perforce/kdevperforce.desktop
@@ -12,10 +12,12 @@ Comment[fr]=Un module externe qui gère le programme « PerForce » pour la gest
 Comment[hu]=Integrációt biztosít a Perforce szoftverkonfigurációs rendszerrel - http://www.perforce.com/
 Comment[it]=Integra Perforce, un sistema per la configurazione software. http://www.perforce.com/
 Comment[nl]=Integreert Perforce, een systeem voor softwareconfiguratie. Zie http://www.perforce.com/
+Comment[pl]=Integracja z Perforce, systemem zarządzania konfiguracją oprogramowania. http://www.perforce.com/
 Comment[pt]=Integra o Perforce, um sistema de gestão de configurações de 'software'. http://www.perforce.com/
 Comment[pt_BR]=Integra o Perforce, um software de configuração e gerenciamento do sistema. http://www.perforce.com/
 Comment[ru]=Интегрирует Perforce, систему управления конфигурациями программного обеспечения. http://www.perforce.com/
 Comment[sr]=Интегрише perforce, систем за управљање подешавањем софтвера. http://www.perforce.com/
+Comment[sr@Latn]=Integriše perforce, sistem za upravljanje podešavanjem softvera. http://www.perforce.com/
 Comment[sv]=Integrerar Perforce, ett konfigurationshanteringsverktyg för programvara. http://www.perforce.com/
 Comment[ta]=ஒருங்கினைக்கும் Perforce, ஒரு மென் பொருள் மேலாளர் அமைப்பு. http://www.perforce.com/
 Comment[xx]=xxIntegrates Perforce, a software configuration management system. http://www.perforce.com/xx
@@ -35,10 +37,12 @@ GenericName[fr]=Intégration de « Perforce »
 GenericName[hu]=Perforce-integráció
 GenericName[it]=Integrazione di Perforce
 GenericName[nl]=Perforce-integratie
+GenericName[pl]=Integracja z Perforce
 GenericName[pt]=Integração com o Perforce
 GenericName[pt_BR]=Integração com o Perforce
 GenericName[ru]=Интеграция Perforce
 GenericName[sr]=Интеграција perforce-а
+GenericName[sr@Latn]=Integracija perforce-a
 GenericName[sv]=Integrering av Perforce
 GenericName[ta]=Perforce ஒருங்கினைப்பு
 GenericName[xx]=xxPerforce Integrationxx
