--- a/buildtools/autotools/kdevautoproject.desktop
+++ b/buildtools/autotools/kdevautoproject.desktop
@@ -13,10 +13,12 @@ Comment[fr]=Un module externe pour la gestion de projet avec le programme « Aut
 Comment[hu]=Automake-projekt
 Comment[it]=Progetto per automake
 Comment[nl]=Automake-project
+Comment[pl]=Projekt: Automake
 Comment[pt]=Projecto Automake
 Comment[pt_BR]=Projeto Automake
 Comment[ru]=Проект Automake
 Comment[sr]=Automake пројекат
+Comment[sr@Latn]=Automake projekat
 Comment[sv]=Automake-projekt
 Comment[ta]=ஆட்டொமேக் பிராஜக்ட்
 Comment[uz]=Automake лойиҳаси
@@ -24,6 +26,7 @@ Comment[xx]=xxAutomake Projectxx
 Comment[zh_CN]=Automake项目
 Name=KDevAutoProject
 Name[de]=Automake-Projekt (KDevelop)
+Name[pl]=KDevProjektAuto
 Name[pt_BR]=KDevAutoProjeto
 Name[sv]=KDevelop autoprojekt
 Name[ta]=கெடெவ்ஆட்டொ பிராஜக்ட்
@@ -39,10 +42,12 @@ GenericName[fr]=Projet avec Automake
 GenericName[hu]=Automake-projekt
 GenericName[it]=Progetto Automake
 GenericName[nl]=Automake-project
+GenericName[pl]=Projekt: Automake
 GenericName[pt]=Projecto de Automake
 GenericName[pt_BR]=Projeto Automake
 GenericName[ru]=Проект Automake
 GenericName[sr]=Automake пројекат
+GenericName[sr@Latn]=Automake projekat
 GenericName[sv]=Automake-projekt
 GenericName[ta]=ஆட்டொமேக் பிராஜக்ட்
 GenericName[uz]=Automake лойиҳаси
