--- a/buildtools/autotools/kdevkdeautoproject.desktop
+++ b/buildtools/autotools/kdevkdeautoproject.desktop
@@ -18,12 +18,14 @@ Comment[pt_BR]=Projeto Automake do KDE
 Comment[ru]=Проект KDE Automake
 Comment[sl]=Projekt KDE Automake
 Comment[sr]=KDE-ов Automake пројекат
+Comment[sr@Latn]=KDE-ov Automake projekat
 Comment[sv]=KDE Automake-projekt
 Comment[ta]=KDE ஆட்டொமேக் பிராஜக்ட்
 Comment[xx]=xxKDE Automake Projectxx
 Comment[zh_CN]=KDE Automake项目
 Name=KDevKDEAutoProject
 Name[de]=KDE-Automake-Projekt (KDevelop)
+Name[pl]=KDevProjektKDEAuto
 Name[pt_BR]=KDevKDEAutoProjeto
 Name[sv]=KDevelop KDE-autoprojekt
 Name[ta]=கெடெவ்ஆட்டொ பிராஜக்ட்
@@ -39,10 +41,12 @@ GenericName[fr]=Projet avec Automake pour KDE
 GenericName[hu]=KDE Automake-projekt
 GenericName[it]=Progetto KDE Automake
 GenericName[nl]=KDE Automake-project
+GenericName[pl]=Projekt: KDE Automake
 GenericName[pt]=Projecto KDE com Automake
 GenericName[pt_BR]=Projeto Automake do KDE
 GenericName[ru]=Проект KDE Automake
 GenericName[sr]=KDE-ов Automake пројекат
+GenericName[sr@Latn]=KDE-ov Automake projekat
 GenericName[sv]=KDE Automake-projekt
 GenericName[ta]=KDE ஆட்டொமேக் பிராஜக்ட்
 GenericName[xx]=xxKDE Automake Projectxx
