--- a/buildtools/generic/buildsystem/shellscript/kdevbuildscript.desktop
+++ b/buildtools/generic/buildsystem/shellscript/kdevbuildscript.desktop
@@ -4,6 +4,7 @@ Type=Service
 Exec=blubb
 Name=KDevBuildShellScript
 Name[de]=Shell-Programm (KDevelop)
+Name[pl]=KDevPowłokaSkryptBudowania
 Name[sv]=KDevelop byggskalskript
 Name[ta]=கெடெவ் பில்டு ஷெல் ஸ்கிரிப்ட்
 Name[xx]=xxKDevBuildShellScriptxx
@@ -17,10 +18,12 @@ Comment[fr]=Un module externe pour la gestion de projets basés sur des scripts 
 Comment[hu]=Parancsfájl-alapú fordítórendszer
 Comment[it]=Sistema di compilazione basato su script di shell
 Comment[nl]=Shellscript-gebaseerd buildsysteem
+Comment[pl]=System budowania oparty na powłoce
 Comment[pt]=Sistema de compilação baseado em 'shell script'
 Comment[pt_BR]=Sistema de construção baseado em script shell
 Comment[ru]=Система сборки, основанная на скриптах оболочки
 Comment[sr]=Систем за градњу заснован на скриптама шкољке
+Comment[sr@Latn]=Sistem za gradnju zasnovan na skriptama školjke
 Comment[sv]=Byggsystem baserat på skalskript
 Comment[ta]=ஷெல் ஸ்கிரிப்ட் முல வடிவமைப்புக் கணினி
 Comment[xx]=xxShell script based build systemxx
