--- a/buildtools/generic/kdevgenericproject.desktop
+++ b/buildtools/generic/kdevgenericproject.desktop
@@ -5,6 +5,7 @@ Icon=kdevelop
 Type=Service
 Name=KDevGenericProject
 Name[de]=Generisches Projekt (KDevelop)
+Name[pl]=KDevZwykłyProjekt
 Name[sv]=KDevelop generellt projekt
 Name[ta]=கெடெவ் பிறப்பு பிராஜக்ட்
 Name[xx]=xxKDevGenericProjectxx
@@ -16,9 +17,11 @@ Comment[fr]=Un module externe pour la gestion de projet générique.
 Comment[hu]=Általános projekt
 Comment[it]=Progetto generico
 Comment[nl]=Algemeen project
+Comment[pl]=Zwykły projekt
 Comment[pt]=Projecto Genérico
 Comment[ru]=Общий проект
 Comment[sr]=Генерички пројекат
+Comment[sr@Latn]=Generički projekat
 Comment[sv]=Generellt projekt
 Comment[ta]=பிறப்பு பிராஜக்ட்
 Comment[xx]=xxGenericProjectxx
