--- a/buildtools/pascal/kdevpascalproject.desktop
+++ b/buildtools/pascal/kdevpascalproject.desktop
@@ -13,10 +13,12 @@ Comment[fr]=Un module externe pour la gestion de projet avec le langage PASCAL.
 Comment[hu]=Pascal projekt
 Comment[it]=Progetto per Pascal
 Comment[nl]=Pascal-project
+Comment[pl]=Projekt: Pascal
 Comment[pt]=Projecto de Pascal
 Comment[pt_BR]=Projeto Pascal
 Comment[ru]=Проект Pascal
 Comment[sr]=Pascal пројекат
+Comment[sr@Latn]=Pascal projekat
 Comment[sv]=Pascal-projekt
 Comment[ta]=பாஸ்கல் பிராஜக்ட்
 Comment[uz]=Pascal лойиҳаси
@@ -24,6 +26,7 @@ Comment[xx]=xxPascal Projectxx
 Comment[zh_CN]=Pascal项目
 Name=KDevPascalProject
 Name[de]=Pascal-Projekt (KDevelop)
+Name[pl]=KDevProjektPascal
 Name[sv]=KDevelop Pascal-projekt
 Name[ta]=கெடெவ் பாஸ்கல் பிராஜக்ட்
 Name[xx]=xxKDevPascalProjectxx
@@ -38,10 +41,12 @@ GenericName[fr]=Projet avec PASCAL
 GenericName[hu]=Pascal projekt
 GenericName[it]=Progetto in Pascal
 GenericName[nl]=Pascal-project
+GenericName[pl]=Projekt: Pascal
 GenericName[pt]=Projecto de Pascal
 GenericName[pt_BR]=Projeto Pascal
 GenericName[ru]=Проект Pascal
 GenericName[sr]=Pascal пројекат
+GenericName[sr@Latn]=Pascal projekat
 GenericName[sv]=Pascal-projekt
 GenericName[ta]=பாஸ்கல் பிராஜக்ட்
 GenericName[uz]=Pascal лойиҳаси
