--- a/editors/editor-chooser/kdevpart_editorchooser.desktop
+++ b/editors/editor-chooser/kdevpart_editorchooser.desktop
@@ -13,16 +13,19 @@ Comment[fr]=Un module externe pour le choix de l'éditeur de texte.
 Comment[hu]=A szövegszerkesztő komponens kiválasztását teszi lehetővé.
 Comment[it]=Provvede a una finestra per la selezione dell'editor.
 Comment[nl]=Biedt een dialoog om een editor te kiezen.
+Comment[pl]=Okno dialogowe do wyboru edytora.
 Comment[pt]=Fornece um diálogo para a selecção de Editor.
 Comment[pt_BR]=Provê um diálogo para seleção do Editor.
 Comment[ru]=Предоставляет диалог выбора редактора.
 Comment[sr]=Обезбеђује прозор за избор уређивача.
+Comment[sr@Latn]=Obezbeđuje prozor za izbor uređivača.
 Comment[sv]=Tillhandahåller en dialogruta för val av editor.
 Comment[ta]=தொகுப்பாளர் தேர்விற்கான உறையாடலைத் தரும்
 Comment[xx]=xxProvides a dialog for Editor selection.xx
 Comment[zh_CN]=提供编辑器选择对话框
 Name=KDevEditorChooser
 Name[de]=Editor-Auswahl (KDevelop)
+Name[pl]=KDevWybórEdytora
 Name[sv]=KDevelop editorväljare
 Name[ta]=கெடெவ் தொகுப்பாளர் தேர்வாளர்
 Name[xx]=xxKDevEditorChooserxx
@@ -36,11 +39,13 @@ GenericName[fr]=Sélection de l'éditeur
 GenericName[hu]=szerkesztőkomponens-választás
 GenericName[it]=Selezione Editor
 GenericName[nl]=Editorkiezer
+GenericName[pl]=Wybór edytora
 GenericName[pt]=Selecção de Editor
 GenericName[pt_BR]=Seleção de Editor
 GenericName[ru]=Выбор редактора
 GenericName[sl]=Izbira urejevalnika
 GenericName[sr]=Избор уређивача
+GenericName[sr@Latn]=Izbor uređivača
 GenericName[sv]=Val av editor
 GenericName[ta]=தொகுப்பாளர் தேர்வு
 GenericName[xx]=xxEditor Selectionxx
