--- a/languages/cpp/app_templates/kapp/app.desktop
+++ b/languages/cpp/app_templates/kapp/app.desktop
@@ -17,11 +17,13 @@ Comment[fr]=Une application KPart pour KDE.
 Comment[hu]=KPart-alapú KDE-alkalmazás
 Comment[it]=Applicazione KPart di KDE
 Comment[nl]=Een KDE KPart-toepassing
+Comment[pl]=Aplikacja KDE
 Comment[pt]=Uma aplicação KPart do KDE
 Comment[pt_BR]=Um Aplicativo KPart do KDE
 Comment[ru]=Приложение KPart для KDE
 Comment[sl]=Program KPart za KDE
 Comment[sr]=KDE KPart програм
+Comment[sr@Latn]=KDE KPart program
 Comment[sv]=Ett KDE Kpart-program
 Comment[ta]=கெடி கெபார்ட்  பயன்பாடு 
 Comment[xx]=xxA KDE KPart Applicationxx
