--- a/languages/cpp/compiler/gccoptions/kdevgccoptions.desktop
+++ b/languages/cpp/compiler/gccoptions/kdevgccoptions.desktop
@@ -11,16 +11,19 @@ Comment[et]=GNU C kompilaator
 Comment[fr]=Compilateur C du GNU.
 Comment[hu]=GNU C fordítóprogram
 Comment[it]=Compilatore GNU C
+Comment[pl]=Kompilator GNU C 
 Comment[pt]=Compilador GNU C
 Comment[pt_BR]=Compilador GNU C
 Comment[ru]=Компилятор GNU C
 Comment[sr]=GNU-ов C компајлер
+Comment[sr@Latn]=GNU-ov C kompajler
 Comment[sv]=GNU C-kompilator
 Comment[ta]=GNU Cதொகுப்பி
 Comment[xx]=xxGNU C Compilerxx
 Comment[zh_CN]=GNU C编译器
 Name=GccOptions
 Name[de]=GCC-Einstellungen (KDevelop)
+Name[pl]=Opcje Gcc
 Name[sv]=Alternativ för gcc
 Name[ta]=Gccவிருப்பத்தேர்வுகள் 
 Name[xx]=xxGccOptionsxx
