--- a/languages/cpp/debugger/kdevdebugger.desktop
+++ b/languages/cpp/debugger/kdevdebugger.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Ce module externe fournit une interface pour GDB, le débogueur au n
 Comment[hu]=Ez a bővítőmodul grafikus felületet biztosít a GDB nyomkövető használatához, C/C++-hoz és más nyelvekhez, forrásszinten. http://sources.redhat.com/gdb/
 Comment[it]=Questo plugin provvede a un'interfaccia per GDB, un debugger a livello sorgente per C, C++ e altro. http://sources.redhat.com/gdb/
 Comment[nl]=Deze plugin biedt een grafische schil voor GDB, een broncode-debugger voor C, C++ en meer (http://sources.redhat.com/gdb/)
+Comment[pl]=Ta wtyczka udostępnia interfejs do GDB, debugera poziomu źródłowego dla C, C++ i innych. http://sources.redhat.com/gdb/
 Comment[pt]=Este 'plugin' oferece uma interface para o GDB, um depurador ao nível do código para C, C++ entre outros. http://sources.redhat.com/gdb/
 Comment[pt_BR]=Este plugin fornece um frontend para o GDB, um depurador a nível de código para C, C++ e mais. http://sources.redhat.com/gdb/
 Comment[ru]=Этот модуль предоставляет интерфейс к GDB, отладчику исходного кода для C, C++ и других языков. http://sources.redhat.com/gdb/
-Comment[sr]=Овај додатак обезбеђује сучеље за GDB, програм за проналажење грешака на нивоу изворног кода за C, C++ и више. http://sources.redhat.com/gdb/
+Comment[sr]=Овај прикључак обезбеђује сучеље за GDB, програм за проналажење грешака на нивоу изворног кода за C, C++ и више. http://sources.redhat.com/gdb/
+Comment[sr@Latn]=Ovaj priključak obezbeđuje sučelje za GDB, program za pronalaženje grešaka na nivou izvornog koda za C, C++ i više. http://sources.redhat.com/gdb/
 Comment[sv]=Insticksprogrammet tillhandahåller ett gränssnitt till GDB, en källkodsavlusare för C, C++ med mera. http://sources.redhat.com/gdb/
 Comment[ta]=GDB க்கு இந்த சொருகு ஒரு முன்நிறுத்தல் , C, C++ மற்றும் பலவற்றிற்கு ஒரு மூல-நிலை டிபக்கர்
 Comment[xx]=xxThis plugin provides a frontend for GDB, a source-level debugger for C, C++ and more. http://sources.redhat.com/gdb/xx
 Comment[zh_CN]=这个插件是一个GDB前端，一个C, C++和其它语言的源代码调试器。http://sources.redhat.com/gdb/
 Name=KDevDebugger
 Name[de]=Debugger (KDevelop)
+Name[pl]=KDevDebuger
 Name[sv]=KDevelop avlusare
 Name[ta]=கெடெவ் டிபக்கர்
 Name[xx]=xxKDevDebuggerxx
@@ -35,10 +38,12 @@ GenericName[fr]=Interface du débogueur
 GenericName[hu]=grafikus felületű GDB
 GenericName[it]=Interfaccia al debugger
 GenericName[nl]=Grafische schil voor debugger
+GenericName[pl]=Interfejs do debugera
 GenericName[pt]=Interface de Depuração
 GenericName[pt_BR]=Frontend do Depurador
 GenericName[ru]=Интегрированный отладчик
 GenericName[sr]=Сучеље програма за проналажење грешака
+GenericName[sr@Latn]=Sučelje programa za pronalaženje grešaka
 GenericName[sv]=Gränssnitt för avlusare
 GenericName[ta]=டிபக்கர் பிரான்டட்
 GenericName[xx]=xxDebugger Frontendxx
