--- a/languages/cpp/kdevcppsupport.desktop
+++ b/languages/cpp/kdevcppsupport.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Un module externe pour la gestion du langage C++.
 Comment[hu]=C++-támogatás
 Comment[it]=Supporto per C++
 Comment[nl]=Ondersteuning voor C++
+Comment[pl]=Obsługa C++
 Comment[pt]=Suporte a C++
 Comment[pt_BR]=Suporte ao C++
 Comment[ru]=Поддержка языка C++
 Comment[sr]=Подршка за C++
+Comment[sr@Latn]=Podrška za C++
 Comment[sv]=C++ stöd
 Comment[ta]=C++ ஆதரவு
 Comment[xx]=xxC++ Supportxx
 Comment[zh_CN]=C++支持
 Name=KDevCppSupport
 Name[de]=CPP-Unterstützung (KDevelop)
+Name[pl]=KDevObsługaCpp
 Name[sv]=KDevelop C++ stöd
 Name[ta]=கெடெவ்சிபிபி ஆதரவு
 Name[xx]=xxKDevCppSupportxx
@@ -35,10 +38,12 @@ GenericName[fr]=Gestion du C++
 GenericName[hu]=C++-támogatás
 GenericName[it]=Supporto C++
 GenericName[nl]=Ondersteuning voor C++
+GenericName[pl]=Obsługa C++
 GenericName[pt]=Suporte a C++
 GenericName[pt_BR]=Suporte ao C++
 GenericName[ru]=Поддержка языка C++
 GenericName[sr]=Подршка за C++
+GenericName[sr@Latn]=Podrška za C++
 GenericName[sv]=C++ stöd
 GenericName[ta]=C++ ஆதரவு
 GenericName[xx]=xxC++ Supportxx
