--- a/languages/fortran/compiler/pgioptions/kdevpghpfoptions.desktop
+++ b/languages/fortran/compiler/pgioptions/kdevpghpfoptions.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Compilateur Fortran hautes performances du Portland Group.
 Comment[hu]=Portland Group nagyteljesítményű Fortran fordítóprogram
 Comment[it]=Compilatore ad alte prestazioni per Fortran del Portland Group
 Comment[nl]=Portland Group High Performance Fortran-compiler
+Comment[pl]=Kompilator Portland Group High Performance Fortran
 Comment[pt]=Compilador Portland Group High Performance Fortran
 Comment[pt_BR]=Compilador Portland Group Alta Performance
 Comment[ru]=Компилятор Portland Group High Performance Fortran
 Comment[sr]=Fortran компајлер високих перформанси Portland Group-а
+Comment[sr@Latn]=Fortran kompajler visokih performansi Portland Group-a
 Comment[sv]=Portland gruppens högprestanda Fortran 77-kompilator
 Comment[ta]=பொர்ட்லான்ட் குழு உயர் செயல்பாடு பொர்ட்ரான் தொகுப்பி
 Comment[xx]=xxPortland Group High Performance Fortran compilerxx
 Comment[zh_CN]=Portland Group高性能Fortran编译器
 Name=PghpfOptions
 Name[de]=Pghpf-Einstellungen (KDevelop)
+Name[pl]=Opcje Pghpf
 Name[sv]=Alternativ för pghpf
 Name[ta]=Pghpf விருப்பத்தேர்வுகள் 
 Name[xx]=xxPghpfOptionsxx
