--- a/languages/fortran/kdevfortransupport.desktop
+++ b/languages/fortran/kdevfortransupport.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Un module externe pour la gestion du langage Fortran77.
 Comment[hu]=Fortran 77-támogatás
 Comment[it]=Supporto per Fortran 77
 Comment[nl]=Ondersteuning voor Fortran 77
+Comment[pl]=Obsługa Fortrana 77
 Comment[pt]=Suporte a Fortran 77
 Comment[pt_BR]=Suporte ao Fortran 77
 Comment[ru]=Поддержка языка Fortran 77
 Comment[sr]=Подршка за Fortran 77
+Comment[sr@Latn]=Podrška za Fortran 77
 Comment[sv]=Fortran 77-stöd
 Comment[ta]=பொர்ட்ரான் 77 ஆதரவு
 Comment[xx]=xxFortran 77 Supportxx
 Comment[zh_CN]=Fortran 77支持
 Name=KDevFortran77Support
 Name[de]=Fortran-77-Unterstützung (KDevelop)
+Name[pl]=KDevObsługaFortrana77
 Name[sv]=KDevelop Fortran 77-stöd
 Name[ta]=கெடெவ் போர்ட்ரான் 77 ஆதரவு
 Name[xx]=xxKDevFortran77Supportxx
@@ -35,10 +38,12 @@ GenericName[fr]=Langage Fortran 77
 GenericName[hu]=Fortran 77-támogatás
 GenericName[it]=Supporto Fortran 77
 GenericName[nl]=Ondersteuning voor Fortran 77
+GenericName[pl]=Obsługa Fortrana 77
 GenericName[pt]=Suporte a Fortran 77
 GenericName[pt_BR]=Suporte ao Fortran 77
 GenericName[ru]=Поддержка языка Fortran 77
 GenericName[sr]=Подршка за Fortran 77
+GenericName[sr@Latn]=Podrška za Fortran 77
 GenericName[sv]=Fortran 77-stöd
 GenericName[xx]=xxFortran 77 Supportxx
 GenericName[zh_CN]=Fortran 77支持
