--- a/languages/pascal/compiler/fpcoptions/kdevfpcoptions.desktop
+++ b/languages/pascal/compiler/fpcoptions/kdevfpcoptions.desktop
@@ -16,12 +16,14 @@ Comment[pt]=Compilador Free Pascal
 Comment[pt_BR]=Compilador Free Pascal
 Comment[ru]=Компилятор Free Pascal
 Comment[sr]=Free Pascal компајлер
+Comment[sr@Latn]=Free Pascal kompajler
 Comment[sv]=Fri Pascal-kompilator
 Comment[ta]=இலவச பாஸ்கல் தொகுப்பி
 Comment[xx]=xxFree Pascal Compilerxx
 Comment[zh_CN]=Free Pascal编译器
 Name=FpcOptions
 Name[de]=Fpc-Einstellungen (KDevelop)
+Name[pl]=Opcje Fpc
 Name[sv]=Alternativ för fpc
 Name[ta]=Fpcவிருப்பத்தேர்வுகள் 
 Name[xx]=xxFpcOptionsxx
