--- a/languages/pascal/kdevpascalsupport.desktop
+++ b/languages/pascal/kdevpascalsupport.desktop
@@ -12,17 +12,20 @@ Comment[fr]=Un module externe pour la gestion du langage PASCAL.
 Comment[hu]=Támogatás a Pascal nyelv használatához
 Comment[it]=Supporto per il linguaggio Pascal
 Comment[nl]=Ondersteuning voor Pascal
+Comment[pl]=Obsługa języka Pascal
 Comment[pt]=Suporte da Linguagem Pascal
 Comment[pt_BR]=Suporte à Linguagem Pascal
 Comment[ru]=Поддержка языка Pascal
 Comment[sl]=Podpora jeziku pascal
 Comment[sr]=Језичка подршка за Pascal
+Comment[sr@Latn]=Jezička podrška za Pascal
 Comment[sv]=Stöd för språket Pascal
 Comment[ta]=பாஸ்கல் மொழி ஆதரவு
 Comment[xx]=xxPascal Language Supportxx
 Comment[zh_CN]=Pascal语言支持
 Name=KDevPascalSupport
 Name[de]=Pascal-Sprachunterstützung (KDevelop)
+Name[pl]=KDevObsługaPascala
 Name[sv]=KDevelop Pascal-stöd
 Name[ta]=கெடெவ் பாஸ்கல் ஆதரவு
 Name[xx]=xxKDevPascalSupportxx
@@ -36,11 +39,13 @@ GenericName[fr]=Langage PASCAL
 GenericName[hu]=Pascal-támogatás
 GenericName[it]=Supporto per il linguaggio Pascal
 GenericName[nl]=Ondersteuning voor Pascal
+GenericName[pl]=Obsługa języka Pascal
 GenericName[pt]=Suporte à Linguagem Pascal
 GenericName[pt_BR]=Suporte à Linguagem Pascal
 GenericName[ru]=Поддержка языка Pascal
 GenericName[sl]=Podpora jezicu pascal
 GenericName[sr]=Језичка подршка за Pascal
+GenericName[sr@Latn]=Jezička podrška za Pascal
 GenericName[sv]=Stöd för språket Pascal
 GenericName[ta]=பாஸ்கல் மொழி ஆதரவு
 GenericName[xx]=xxPascal Language Supportxx
