--- a/languages/python/kdevpythonsupport.desktop
+++ b/languages/python/kdevpythonsupport.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Un module externe pour la gestion du langage PYTHON.
 Comment[hu]=Python-támogatás
 Comment[it]=Supporto per Python
 Comment[nl]=Ondersteuning voor Python
+Comment[pl]=Obsługa Pythona
 Comment[pt]=Suporte a Python
 Comment[pt_BR]=Suporte ao Python
 Comment[ru]=Поддержка языка Python
 Comment[sr]=Подршка за Python
+Comment[sr@Latn]=Podrška za Python
 Comment[sv]=Python-stöd
 Comment[ta]=பைதான் ஆதரவு
 Comment[xx]=xxPython Supportxx
 Comment[zh_CN]=Python语言支持
 Name=KDevPythonSupport
 Name[de]=Python-Sprachunterstützung (KDevelop)
+Name[pl]=KDevObsługaPythona
 Name[sv]=KDevelop Python-stöd
 Name[ta]=கெடெவ் பைதான் ஆதரவு
 Name[xx]=xxKDevPythonSupportxx
@@ -35,10 +38,12 @@ GenericName[fr]=Langage PYTHON
 GenericName[hu]=Python-támogatás
 GenericName[it]=Supporto per Python
 GenericName[nl]=Ondersteuning voor Python
+GenericName[pl]=Obsługa Pythona
 GenericName[pt]=Suporte a Python
 GenericName[pt_BR]=Suporte ao Python
 GenericName[ru]=Поддержка языка Python
 GenericName[sr]=Подршка за Python
+GenericName[sr@Latn]=Podrška za Python
 GenericName[sv]=Python-stöd
 GenericName[ta]=பைதான் ஆதரவு
 GenericName[xx]=xxPython Supportxx
