--- a/lib/interfaces/kdevelopbuildsystems.desktop
+++ b/lib/interfaces/kdevelopbuildsystems.desktop
@@ -13,10 +13,12 @@ Name[fr]=Interface du système de construction de KDevelop
 Name[hu]=KDevelop fordításkezelő felület
 Name[it]=Interfaccia di compilazione di KDevelop
 Name[nl]=KDevelop Buildsysteem-interface
+Name[pl]=Interfejs KDevelopa do systemu budowania
 Name[pt]=Interface do KDevelop para o Sistema de Compilação
 Name[pt_BR]=Interface de Sistema de Construção do KDevelop
 Name[ru]=Интерфейс системы сборки
 Name[sr]=KDevelop-ов интерфејс система за изградњу
+Name[sr@Latn]=KDevelop-ov interfejs sistema za izgradnju
 Name[sv]=KDevelop byggsystemgränssnitt
 Name[ta]=கெடெவலப் அமை கணினி இடைமுகம்
 Name[xx]=xxKDevelop Build System Interfacexx
