--- a/lib/interfaces/kdevelopcompileroptions.desktop
+++ b/lib/interfaces/kdevelopcompileroptions.desktop
@@ -14,10 +14,12 @@ Name[fr]=Interface de la boite de dialogue d'options du compilateur de KDevelop
 Name[hu]=A KDevelop fordítási opcióinak párbeszédablaka
 Name[it]=Interfaccia KDevelop per le opzioni di compilazione
 Name[nl]=KDevelop Compileroptiesdialoog-interface
+Name[pl]=Interfejs KDevelopa do okna dialogowego opcji kompilatora
 Name[pt]=Interface da Janela de Opções do Compilador do KDevelop
 Name[pt_BR]=Interface de Diálogo de Opções do Compilador do KDevelop
 Name[ru]=Интерфейс диалога опций компилятора
 Name[sr]=KDevelop-ов интерфејс дијалога „Опције преводиоца“
+Name[sr@Latn]=KDevelop-ov interfejs dijaloga „Opcije prevodioca“
 Name[sv]=KDevelop dialoggränssnitt för kompilatoralternativ
 Name[ta]=கெடெவலப் தொகுப்பித் தேர்வுகள் உரை இடைமுகம்
 Name[xx]=xxKDevelop Compiler Options Dialog Interfacexx
