--- a/lib/interfaces/kdevelopcreatefile.desktop
+++ b/lib/interfaces/kdevelopcreatefile.desktop
@@ -13,10 +13,12 @@ Name[fr]=Interface de la boite de dialogue de création de fichier de KDE
 Name[hu]=KDevelop fájllétrehozási felület
 Name[it]=Interfaccia KDevelop per creare file
 Name[nl]=KDevelop Bestand aanmaken-interface
+Name[pl]=Interfejs KDevelopa do tworzenia pliku
 Name[pt]=Interface de Criação de Ficheiro do KDevelop
 Name[pt_BR]=Interface para Criar Arquivo do KDevelop
 Name[ru]=Интерфейс средства создания файлов
 Name[sr]=KDevelop-ов интерфејс за прављење фајла
+Name[sr@Latn]=KDevelop-ov interfejs za pravljenje fajla
 Name[sv]=KDevelop gränssnitt för att skapa filer
 Name[ta]=கெடெவலப் உருவாக்க கோப்பு இடைமுகம்
 Name[xx]=xxKDevelop Create File interfacexx
