--- a/lib/interfaces/kdeveloplanguagesupport.desktop
+++ b/lib/interfaces/kdeveloplanguagesupport.desktop
@@ -13,10 +13,12 @@ Name[fr]=Interface du support de langages de KDevelop
 Name[hu]=KDevelop nyelvtámogatási felület
 Name[it]=Interfaccia KDevelop per il supporto di linguaggio
 Name[nl]=KDevelop Interface voor taalondersteuning
+Name[pl]=Interfejs KDevelopa do obsługi języków
 Name[pt]=Interface de Suporte a Linguagens do KDevelop
 Name[pt_BR]=Interface de Suporte à Linguagem do KDevelop
 Name[ru]=Интерфейс языковой поддержки
 Name[sr]=KDevelop-ов интерфејс за језичку подршку
+Name[sr@Latn]=KDevelop-ov interfejs za jezičku podršku
 Name[sv]=KDevelop gränssnitt för språkstöd
 Name[ta]=KDevelop  மொழி ஆதரவானஇடைவிளிம்பு
 Name[xx]=xxKDevelop Language Support Interfacexx
