--- a/lib/interfaces/kdevelopversioncontrol.desktop
+++ b/lib/interfaces/kdevelopversioncontrol.desktop
@@ -12,10 +12,12 @@ Name[et]=KDevelopi versioonide kontrollimise liides
 Name[fr]=Interface du contrôle de version de KDevelop
 Name[hu]=KDevelop verziókezelési felület
 Name[nl]=KDevelop Versiebeheer-interface
+Name[pl]=Interfejs Kdevelopa do kontroli wersji
 Name[pt]=Interface de Controlo de Versões do KDevelop
 Name[pt_BR]=Interface de Controle de Versão do KDevelop
 Name[ru]=Интерфейс системы управления версиями
 Name[sr]=KDevelop-ов интерфејс за контролу верзије
+Name[sr@Latn]=KDevelop-ov interfejs za kontrolu verzije
 Name[sv]=KDevelop gränssnitt för versionskontroll
 Name[ta]=KDevelop  பதிப்பு கட்டுப்பாட்டு இடைஇணைப்பு
 Name[xx]=xxKDevelop Version Control Interfacexx
