--- a/mimetypes/chm.desktop
+++ b/mimetypes/chm.desktop
@@ -9,10 +9,12 @@ Comment[fr]=Document d'aide en HTML
 Comment[hu]=HTML dokumentáció
 Comment[it]=Progetto per la guida HTML
 Comment[nl]=HTML Helpdocument
+Comment[pl]=Dokument pomocy w formacie HTML
 Comment[pt]=Documento de Ajuda em HTML
 Comment[pt_BR]=Documento de Ajuda HTML
 Comment[ru]=Документ HTML Help
 Comment[sr]=HTML документ помоћи
+Comment[sr@Latn]=HTML dokument pomoći
 Comment[sv]=HTML hjälpdokument
 Comment[ta]=HTML  உதவி ஆவணம்
 Comment[xx]=xxHTML Help Documentxx
