--- a/parts/abbrev/kdevabbrev.desktop
+++ b/parts/abbrev/kdevabbrev.desktop
@@ -13,16 +13,19 @@ Comment[fr]=Un module externe pour la gestion de la complétion automatique du c
 Comment[hu]=Lehetővé teszi különféle rövidítések használatát (rövid kifejezések kódstruktúrává kibontását)
 Comment[it]=Offre il supporto per le abbreviazioni personalizzate - parole corte le quali espandono in comuni e richieste strutture di codice.
 Comment[nl]=Biedt ondersteuning voor afkortingen - korte stukjes tekst die expanderen tot veelgebruikte codestructuren.
+Comment[pl]=Umożliwia obsługę konfigurowalnych skrótów - krótkich słow rozszerzających się w często używane struktury kodu.
 Comment[pt]=Oferece o suporte para abreviaturas personalizadas - palavras curtas que podem expandir para estruturas de código normalmente necessárias.
 Comment[pt_BR]=Fornece suporte para abreviaturas personalizadas - palavras curtas que se expandem em estruturas de código normalmente necessárias.
 Comment[ru]=Предоставляет поддержку для настраиваемых сокращений - коротких слов, которые заменяются на часто используемые структуры кода.
 Comment[sr]=Обезбеђује подршку за прилагодљиве скраћенице — кратке речи које се проширују у уобичајено потребне структуре кôда.
+Comment[sr@Latn]=Obezbeđuje podršku za prilagodljive skraćenice — kratke reči koje se proširuju u uobičajeno potrebne strukture kôda.
 Comment[sv]=Ger stöd för anpassningsbara förkortningar: korta ord som expanderas till vanligt använda kodstrukturer.
 Comment[ta]=தேவைக்கேற்ப்ப சுருக்கத்திற்க்கு இது அதறவு தரும்-குறியிடு வடிவத்திற்க்கு இந்த சுருக்கங்கள் மிகவும் உதவும்.
 Comment[xx]=xxProvides support for customizable abbreviations - short words which expand into commonly needed code structures.xx
 Comment[zh_CN]=为自定义缩写提供支持 - 按需要扩展为所需代码结构的简短文字。
 Name=KDevAbbrev
 Name[de]=Abkürzungsmodul (KDevelop)
+Name[pl]=KDevSkróty
 Name[sv]=KDevelop förkortningar
 Name[xx]=xxKDevAbbrevxx
 GenericName=Abbreviation Expansion
@@ -35,10 +38,12 @@ GenericName[fr]=Complétion automatique
 GenericName[hu]=rövidítéskezelő
 GenericName[it]=Espansione delle abbreviazioni
 GenericName[nl]=Afkortingen expanderen
+GenericName[pl]=Rozwijanie skrótów
 GenericName[pt]=Expansão de Abreviaturas
 GenericName[pt_BR]=Expansão de Abreviaturas
 GenericName[ru]=Расширение сокращений
 GenericName[sr]=Проширење скраћеница
+GenericName[sr@Latn]=Proširenje skraćenica
 GenericName[sv]=Expansion av förkortningar
 GenericName[ta]=சுருக்கத்தின் விரிவாக்கம்
 GenericName[xx]=xxAbbreviation Expansionxx
