--- a/parts/appwizard/kdevappwizard.desktop
+++ b/parts/appwizard/kdevappwizard.desktop
@@ -12,17 +12,20 @@ Comment[fr]=Un module externe pour la gestion de l'assistant de création d'appl
 Comment[hu]=Alkalmazásvarázsló
 Comment[it]=Wizard di applicazione
 Comment[nl]=Toepassingassistent
+Comment[pl]=Asystent aplikacji
 Comment[pt]=Assistente de Aplicações
 Comment[pt_BR]=Assistente de Aplicativo
 Comment[ru]=Мастер создания приложений
 Comment[sl]=Čarovnik za programe
 Comment[sr]=Чаробњак за програме
+Comment[sr@Latn]=Čarobnjak za programe
 Comment[sv]=Programguide
 Comment[ta]=பயன்பாட்டு வழிக்காட்டி
 Comment[xx]=xxApplication Wizardxx
 Comment[zh_CN]=应用程序向导
 Name=KDevAppWizard
 Name[de]=Anwendungs-Assistent (KDevelop)
+Name[pl]=KDevAsystentApli
 Name[sv]=KDevelop programguide
 Name[xx]=xxKDevAppWizardxx
 GenericName=Application Wizard
@@ -35,11 +38,13 @@ GenericName[fr]=Création d'application
 GenericName[hu]=Alkalmazásvarázsló
 GenericName[it]=Wizard di applicazione
 GenericName[nl]=Toepassingassistent
+GenericName[pl]=Asystent aplikacji
 GenericName[pt]=Assistente de Aplicações
 GenericName[pt_BR]=Assistente de Aplicativo
 GenericName[ru]=Мастер создания приложений
 GenericName[sl]=Čarovnik za programe
 GenericName[sr]=Чаробњак за програме
+GenericName[sr@Latn]=Čarobnjak za programe
 GenericName[sv]=Programguide
 GenericName[ta]=பயன்பாடு வழிகாட்டி 
 GenericName[xx]=xxApplication Wizardxx
