--- a/parts/classbrowser/kdevpart_classbrowser.desktop
+++ b/parts/classbrowser/kdevpart_classbrowser.desktop
@@ -11,16 +11,19 @@ Comment[fr]=Un module externe pour la gestion de l'afficheur de classes.
 Comment[hu]=Osztályböngésző
 Comment[it]=Browser delle classi
 Comment[nl]=Klassenbrowser
+Comment[pl]=Przeglądarka klas
 Comment[pt]=Navegador de Classes
 Comment[pt_BR]=Navegador de Classe
 Comment[ru]=Просмотр классов
 Comment[sr]=Претраживач класа
+Comment[sr@Latn]=Pretraživač klasa
 Comment[sv]=Klassbläddrare
 Comment[ta]=வகுப்பு உலாவி
 Comment[xx]=xxClassBrowserxx
 Comment[zh_CN]=类浏览器
 Name=KDevClassBrowser
 Name[de]=Klassen-Browser (KDevelop)
+Name[pl]=KDevPrzeglądarkaKlas
 Name[sv]=KDevelop klassbläddrare
 Name[ta]=KDev வகுப்பு உலாவி
 Name[xx]=xxKDevClassBrowserxx
@@ -32,10 +35,12 @@ GenericName[et]=Klasside lehitseja
 GenericName[fr]=Afficheur de classes
 GenericName[hu]=osztályböngésző
 GenericName[nl]=Klassenbrowser
+GenericName[pl]=Przeglądarka klas
 GenericName[pt]=Navegador de Classes
 GenericName[pt_BR]=Navegador de Classe
 GenericName[ru]=Просмотр классов
 GenericName[sr]=Претраживач класа
+GenericName[sr@Latn]=Pretraživač klasa
 GenericName[sv]=Klassbläddrare
 GenericName[ta]=வகுப்பு உலாவி
 GenericName[xx]=xxClassBrowserxx
