--- a/parts/distpart/kdevpart_distpart.desktop
+++ b/parts/distpart/kdevpart_distpart.desktop
@@ -12,10 +12,12 @@ Comment[fr]=Un module externe pour la gestion d'un outil d'aide à la constructi
 Comment[hu]=A végső projekt felépítésében és publikálásában segít. Egyelőre csak az RPM csomagformátum támogatott.
 Comment[it]=Aiuta nella costruzione e nella pubblicazione di progetti finali. Solo i pacchetti RPM sono attualmente supportati.
 Comment[nl]=Helpt bij het bouwen en publiceren van het uiteindelijke project. Ondersteunt momenteel alleen RPM.
+Comment[pl]=Pomoc w budowaniu i publikowaniu projektu. Obecnie jest obsługiwany tylko format RPM.
 Comment[pt]=Ajuda na construção e publicação do projecto final. Só é suportado o formato de pacote RPM, por agora.
 Comment[pt_BR]=Auxilia na compilação e ublicação do projeto final. Somente o formato de pacote RPM é suportado por enquanto.
 Comment[ru]=Помогает в сборке и распространении пакетов программ. В данное время поддерживается только формат RPM.
 Comment[sr]=Помаже у грађењу и објављивању коначног пројекта. За сада је подржан само формат пакета RPM.
+Comment[sr@Latn]=Pomaže u građenju i objavljivanju konačnog projekta. Za sada je podržan samo format paketa RPM.
 Comment[sv]=Hjälper till att bygga och publicera det färdiga projektet. Endast RPM-paketformatet stöds för närvarande.
 Comment[ta]=முடிவு பணியில் கட்டுவதற்க்கு மற்றும் வெளியிட இது உதவும்.RPM தொகுப்பு வடிவங்களை மட்டுமே இது அதறிக்கும்.
 Comment[xx]=xxAids in building and publishing the final project. Only RPM package format is supported for now.xx
@@ -34,10 +36,12 @@ GenericName[fr]=Contruction de paquetage
 GenericName[hu]=csomagkészítési támogatás
 GenericName[it]=Supporto finale per la creazione di pacchetti
 GenericName[nl]=Pakketten maken
+GenericName[pl]=Obsługa ostatecznego pakowania
 GenericName[pt]=Suporte a empacotamento de aplicações
 GenericName[pt_BR]=Suporte ao empacotamento final
 GenericName[ru]=Сборка и распространение пакетов
 GenericName[sr]=Коначна пакетна подршка
+GenericName[sr@Latn]=Konačna paketna podrška
 GenericName[sv]=Stöd för slutpaketering
 GenericName[ta]=அதறவுல்ல கடைசி தொகுப்பு
 GenericName[xx]=xxFinal packaging supportxx
