--- a/parts/fileselector/kdevpart_fileselector.desktop
+++ b/parts/fileselector/kdevpart_fileselector.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Un module externe pour la sélection de fichier, qui est un utilitai
 Comment[hu]=Fájlböngésző program (hálózatkezeléssel)
 Comment[it]=Utilità per la navigazione trasparente dei file in rete.
 Comment[nl]=Krachtige, netwerktransparante bestandsbrowser.
+Comment[pl]=Potężne narzędzie do przeglądania plików z obsługą sieci.
 Comment[pt]=Utilitário de navegação de ficheiros poderoso.
 Comment[pt_BR]=Poderoso utilitário de navegação de arquivos transparente à rede.
 Comment[ru]=Средство просмотра списка файлов с поддержкой работы по сети.
 Comment[sr]=Моћан програмчић за претраживање фајлова који је независтан од мреже.
+Comment[sr@Latn]=Moćan programčić za pretraživanje fajlova koji je nezavistan od mreže.
 Comment[sv]=Kraftfullt nätverkstransparent filbläddringsverktyg
 Comment[ta]=வலிமையுள்ள வலை பின்னல் ஊடக கோப்பை தேடும் வசதி.
 Comment[xx]=xxPowerful network transparent file browser utility.xx
 Comment[zh_CN]=强有力的网络文件浏览工具。
 Name=KDevFileSelector
 Name[de]=Datei-Selektor (KDevelop)
+Name[pl]=KDevWybórPliku
 Name[sv]=KDevelop filväljare
 Name[ta]=KDev கோப்பு தேர்வாளன்
 Name[xx]=xxKDevFileSelectorxx
@@ -35,10 +38,12 @@ GenericName[fr]=Sélection de fichier
 GenericName[hu]=fájlválasztó
 GenericName[it]=Selettore file
 GenericName[nl]=Bestandsselector
+GenericName[pl]=Wybór plików
 GenericName[pt]=Selector de Ficheiros
 GenericName[pt_BR]=Seletor de Arquivo
 GenericName[ru]=Селектор файлов
 GenericName[sr]=Бирач фајлова
+GenericName[sr@Latn]=Birač fajlova
 GenericName[sv]=Filväljare
 GenericName[ta]=கோப்பு தேர்வாளர்
 GenericName[xx]=xxFile Selectorxx
