--- a/parts/fileview/kdevfilegroups.desktop
+++ b/parts/fileview/kdevfilegroups.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Un module externe pour la gestion des groupes de fichiers. Il permet
 Comment[hu]=Lehetővé teszi projektfájlok csoportosítását fájlnévminták alapján
 Comment[it]=Permette il raggruppamento dei file di progetto per nome file.
 Comment[nl]=Groepeert projectbestanden op grond van patronen in bestandsnamen.
+Comment[pl]=Pozwala na grupowanie plików projektu zgodnie ze wzorcami nazw plików.
 Comment[pt]=Permite o agrupamento de ficheiros de projecto, de acordo com padrões de nomes de ficheiros.
 Comment[pt_BR]=Permite agrupar arquivos de projetos de acordo com padrões de nome de arquivo.
 Comment[ru]=Позволяет группировать файлы в проекте согласно шаблонам имен.
 Comment[sr]=Дозвољава груписање фајлова пројекта према облицима имена фајлова.
+Comment[sr@Latn]=Dozvoljava grupisanje fajlova projekta prema oblicima imena fajlova.
 Comment[sv]=Tillåter att projektfiler grupperas enligt filnamnsmönster.
 Comment[ta]=திட்ட பணிகோப்புகளை கோப்பின் பெயர் அடிப்படையில் அதனை குழுவாக பிறிக்கும்.
 Comment[xx]=xxAllows for grouping of project files according to filename patterns.xx
 Comment[zh_CN]=允许你根据文件名模式规类项目文件。
 Name=KDevFileGroups
 Name[de]=Dateigruppen-Komponente (KDevelop)
+Name[pl]=KDevGrupyPlików
 Name[sv]=KDevelop filgrupper
 Name[ta]=KDev கோப்பு குழுக்கள்
 Name[xx]=xxKDevFileGroupsxx
@@ -35,10 +38,12 @@ GenericName[fr]=Groupes de fichiers
 GenericName[hu]=fájlcsoportok
 GenericName[it]=Gruppi file
 GenericName[nl]=Bestandsgroepen
+GenericName[pl]=Grupy plików
 GenericName[pt]=Grupos de Ficheiros
 GenericName[pt_BR]=Grupos de Arquivo
 GenericName[ru]=Группы файлов
 GenericName[sr]=Групе фајлова
+GenericName[sr@Latn]=Grupe fajlova
 GenericName[sv]=Filgrupper
 GenericName[ta]=கோப்புக்குழுக்கள்
 GenericName[xx]=xxFile Groupsxx
