--- a/parts/grepview/kdevgrepview.desktop
+++ b/parts/grepview/kdevgrepview.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Un module externe pour la recherche dans les fichiers d'un projet av
 Comment[hu]=A "find|grep" programok integrálása a KDevelopba - lehetővé teszi szövegek fájlokban való gyors keresését minták és reguláris kifejezések felhasználásával
 Comment[it]=Integra "find|grep" in KDevelop - permette la ricerca rapida di file multipli utilizzando motivi o espressioni regolari.
 Comment[nl]=Integreert "find|grep" in KDevelop - snel zoeken door verschillende bestanden naar patronen of reguliere expressies.
+Comment[pl]=Integracja "find|grep" z KDevelop - pozwala na szybie wyszukiwanie wielu plików przy użyciu wzorców i wyrażeń regularnych.
 Comment[pt]=Integra o "find|grep" no KDevelop - permite a procura rápida em vários ficheiros usando padrões ou expressões regulares.
 Comment[pt_BR]=Integra o "find/grep" no KDevelop - permite busca rápida de múltiplos arquivos usando padrões e expressões regulares.
 Comment[ru]=Интегрирует "find|grep" в KDevelop - позволяет производить быстрый поиск по нескольким файлам с использованием шаблонов или регулярных выражений.
 Comment[sr]=Интегрише „find|grep“ у KDevelop — омогућава брзо претраживање више фајлова коришћењем облика имена или регуларних израза.
+Comment[sr@Latn]=Integriše „find|grep“ u KDevelop — omogućava brzo pretraživanje više fajlova korišćenjem oblika imena ili regularnih izraza.
 Comment[sv]=Integrerar "find | grep" med KDevelop - tillåter snabb sökning i flera filer med mönster eller reguljära uttryck.
 Comment[ta]=KDevelopபில் "find|grep" ஒருங்கினை-வடிவங்கள் அல்லது வழக்கமான தொடர்களை பயன்படுத்தி பல்வகை கோப்பை மிக வேகமாய் தெடலாம்.
 Comment[xx]=xxIntegrates "find|grep" in KDevelop - allows fast searching of multiple files using patterns or regular expressions.xx
 Comment[zh_CN]=在KDevelop中集成“查找|grep” - 可以使用模式或正则表达式在多个文件中快速查找。
 Name=KDevGrepView
 Name[de]=Grep-Ansicht (KDevelop)
+Name[pl]=KDevWidokGrep
 Name[sv]=KDevelop grep-visning
 Name[ta]=KDevGrep காட்சி
 Name[xx]=xxKDevGrepViewxx
@@ -35,10 +38,12 @@ GenericName[fr]=Recherche dans des fichiers
 GenericName[hu]=grafikus Grep-felület
 GenericName[it]=Interfaccia a "grep"
 GenericName[nl]=Grep-frontend
+GenericName[pl]=Interfejs do grepa
 GenericName[pt]=Interface do Grep
 GenericName[pt_BR]=Frontend do Grep
 GenericName[ru]=Интеграция Grep
 GenericName[sr]=Grep сучеље
+GenericName[sr@Latn]=Grep sučelje
 GenericName[sv]=Gränssnitt till grep
 GenericName[ta]=Grep முன் பகுதி
 GenericName[xx]=xxGrep Frontendxx
