--- a/parts/konsole/kdevkonsoleview.desktop
+++ b/parts/konsole/kdevkonsoleview.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Un module externe pour la gestion d'une Konsole embarquée pour pouv
 Comment[hu]=Ez a bővítőmodul egy könnyen elérhető, beágyazott parancssort hoz létre a KDevelopon belül.
 Comment[it]=Questo plugin offre una console integrata per KDevelop per l'accesso rapido e semplice alla linea di comando.
 Comment[nl]=Deze plugin geeft KDevelop een ingebedde Konsole voor snelle commandoregeltoegang.
+Comment[pl]=Ta wtyczka dodaje do KDevelopa wbudowaną konsolę umożliwiając szybki i łatwy dostęp do linii komend.
 Comment[pt]=Este 'plugin' dá ao KDevelop um Konsole incorporado para um acesso rápido e simples à linha de comandos.
 Comment[pt_BR]=Este plugin fornece ao KDevelop um konsole embutido para acesso rápido e fácil à linha de comando.
 Comment[ru]=Предоставляет встроенную консоль для быстрого вызова командной строки.
-Comment[sr]=Овај додатак даје KDevelop-у уграђену конзолу за брз и лак приступ командној линији.
+Comment[sr]=Овај прикључак даје KDevelop-у уграђену конзолу за брз и лак приступ командној линији.
+Comment[sr@Latn]=Ovaj priključak daje KDevelop-u ugrađenu konzolu za brz i lak pristup komandnoj liniji.
 Comment[sv]=Insticksprogrammet ger KDevelop en inbyggd terminal för snabb och enkel åtkomst av kommandoraden.
 Comment[ta]=இந்த சொருகி உங்களுக்கு Kஉருவாக்கத்திற்க்கு கன்சோல் உட்பொதியின் மூலம் விரைவு மற்றும் எளிய கட்டளை வறி அனுமதி தரும். 
 Comment[xx]=xxThis plugin gives KDevelop an embedded konsole for quick and easy command line access.xx
 Comment[zh_CN]=这个插件为KDevelop提供KDE终端来快速和方便使用命令行。
 Name=KDevKonsoleView
 Name[de]=Konsole-Unterstützung (KDevelop)
+Name[pl]=KDevWidokKonsoli
 Name[sv]=KDevelop terminalvy
 Name[ta]=KDevKonsole காட்சி
 Name[xx]=xxKDevKonsoleViewxx
@@ -35,10 +38,12 @@ GenericName[fr]=Konsole embarquée
 GenericName[hu]=beágyazott Konsole
 GenericName[it]=Konsole integrata
 GenericName[nl]=Ingebedde Konsole
+GenericName[pl]=Wbudowana konsola
 GenericName[pt]=Konsole Embebida
 GenericName[pt_BR]=Konsole Embutido
 GenericName[ru]=Встроенная Konsole
 GenericName[sr]=Уграђена конзола
+GenericName[sr@Latn]=Ugrađena konzola
 GenericName[sv]=Inbäddad terminal
 GenericName[ta]=கன்சோல் உட்பொதி
 GenericName[xx]=xxEmbedded Konsolexx
