--- a/parts/scripting/kdevscripting.desktop
+++ b/parts/scripting/kdevscripting.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Un module externe pour la gestion de scripts avec le langage PYTHON.
 Comment[hu]=Python szkriptelési felület
 Comment[it]=Interfaccia per lo scripting in Python
 Comment[nl]=Interface voor Python-scripting
+Comment[pl]=Interfejs do skryptów Pythona
 Comment[pt]=Interface de 'Scripting' em Python
 Comment[pt_BR]=Interface para Script Python
 Comment[ru]=Интерфейс к скриптам на Python
 Comment[sr]=Python-ов интерфејс за скриптовање
+Comment[sr@Latn]=Python-ov interfejs za skriptovanje
 Comment[sv]=Python skriptgränssnitt
 Comment[ta]=பைதான் ஏழுத்து இடைமுகம் 
 Comment[xx]=xxPython Scripting Interfacexx
 Comment[zh_CN]=Python脚本接口
 Name=KDevScripting
 Name[de]=Skript-Schnittstelle (KDevelop)
+Name[pl]=KDevSkrypty
 Name[sv]=KDevelop skripthantering
 Name[ta]=KDev எழுத்தமைத்தல்
 Name[xx]=xxKDevScriptingxx
@@ -35,10 +38,12 @@ GenericName[fr]=Interface PYTHON
 GenericName[hu]=Python szkriptelési felület
 GenericName[it]=Interfaccia per scrivere script in Python
 GenericName[nl]=Interface voor Python-scripting
+GenericName[pl]=Interfejs do skryptów Pythona
 GenericName[pt]=Interface de 'Scripting' em Python
 GenericName[pt_BR]=Interface para Script Python
 GenericName[ru]=Интерфейс к скриптам на Python
 GenericName[sr]=Python-ов интерфејс за скриптовање
+GenericName[sr@Latn]=Python-ov interfejs za skriptovanje
 GenericName[sv]=Python skriptgränssnitt
 GenericName[ta]=பைதான் ஏழுத்து இடைமுகம் 
 GenericName[xx]=xxPython Scripting Interfacexx
