--- a/parts/sourcenav/kdevpart_sourcenav.desktop
+++ b/parts/sourcenav/kdevpart_sourcenav.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Un module externe pour la gestion d'un navigateur du code source.
 Comment[hu]=Forráskód-navigáció
 Comment[it]=Navigatore per codice sorgente
 Comment[nl]=Navigatie door broncode
+Comment[pl]=Nawigacja w kodzie źródłowym
 Comment[pt]=Navegação no Código-Fonte
 Comment[pt_BR]=Navegação de Código Fonte
 Comment[ru]=Навигация по исходному коду
 Comment[sr]=Навигација изворним кодом
+Comment[sr@Latn]=Navigacija izvornim kodom
 Comment[sv]=Källkodsnavigering
 Comment[ta]=மூல குறிப்பரை வழி செலுத்து
 Comment[xx]=xxSource Code Navigationxx
 Comment[zh_CN]=源代码浏览
 Name=KDevSourceNav
 Name[de]=Quelltextnavigator-Komponente (KDevelop)
+Name[pl]=KDevNawŹródła
 Name[sv]=KDevelop källkodsnavigering
 Name[ta]=Kடேவ் மூலம் Nav
 Name[xx]=xxKDevSourceNavxx
@@ -35,10 +38,12 @@ GenericName[fr]=Navigation dans le code source
 GenericName[hu]=forráskód-navigáció
 GenericName[it]=Navigazione nel codice sorgente
 GenericName[nl]=Navigatie door broncode
+GenericName[pl]=Nawigacja w kodzie źródłowym
 GenericName[pt]=Navegação no Código Fonte
 GenericName[pt_BR]=Navegação de Código Fonte
 GenericName[ru]=Навигация по исходному коду
 GenericName[sr]=Навигација изворним кодом
+GenericName[sr@Latn]=Navigacija izvornim kodom
 GenericName[sv]=Källkodsnavigering
 GenericName[ta]=மூல குறிப்பரை வழி செலுத்து
 GenericName[xx]=xxSource Code Navigationxx
