--- a/parts/tools/kdevpart_tools.desktop
+++ b/parts/tools/kdevpart_tools.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Un module externe pour l'ajout d'applications externes au menu « Ou
 Comment[hu]=Ez a bővítőmodul lehetővé teszi az Eszközök menü és az eszköztár egyszerű kibővítését
 Comment[it]=Questo plugin offre una via per aggiungere applicazioni esterne al menu o alla barra degli strumenti.
 Comment[nl]=Met deze plugin kunt u op eenvoudige wijze externe toepassingen aan het menu Gereedschap en de werkbalk toevoegen.
+Comment[pl]=Ta wtyczka umożliwia łatwe dodawanie zewnętrznych aplikacji do menu Narzędzia i paska.
 Comment[pt]=Este 'plugin' oferece uma forma simples de adicionar as aplicações externas ao menu Ferramentas e à barra de ferramentas.
 Comment[pt_BR]=Este plugin fornece uma maneira fácil de adicionar aplicativos externos ao menu Ferramentas e barra de ferramentas.
 Comment[ru]=Предоставляет возможности добавления в меню пунктов вызова внешних приложений.
-Comment[sr]=Овај додатак обезбеђује лак начин за додавање спољних програма у мени „Алати“ и у траку са алатима.
+Comment[sr]=Овај прикључак обезбеђује лак начин за додавање спољних програма у мени „Алати“ и у траку са алатима.
+Comment[sr@Latn]=Ovaj priključak obezbeđuje lak način za dodavanje spoljnih programa u meni „Alati“ i u traku sa alatima.
 Comment[sv]=Insticksprogrammet tillhandahåller ett enkelt sätt att lägga till yttre program i verktygsmenyn och verktygsraden.
 Comment[ta]=இந்த சொருகி கருவி பட்டியல் மற்றும் கருவி பட்டையில் வெளிபுற பயண்பாடு எளிய முறையில் செற்க்கலாம். 
 Comment[xx]=xxThis plugin provides an easy way to add external applications to the Tools menu and toolbar.xx
 Comment[zh_CN]=这个插件提供向工具菜单和工具栏添加外部程序的方法。
 Name=KDevTools
 Name[de]=Werkzeug-Menüerweiterung (KDevelop)
+Name[pl]=KDevNarzędzia
 Name[sv]=KDevelop verktyg
 Name[ta]=KDev கருவிகள்
 Name[xx]=xxKDevToolsxx
@@ -35,10 +38,12 @@ GenericName[fr]=Ajout d'outils externes
 GenericName[hu]=Az Eszközök menü kibővítése
 GenericName[it]=Aggiunte al menu Strumenti
 GenericName[nl]=Gereedschap toevoegen
+GenericName[pl]=Dodatek do menu Narzędzia
 GenericName[pt]=Adicionar ao menu de ferramentas
 GenericName[pt_BR]=Adição ao menu Ferramentas
 GenericName[ru]=Дополнение меню инструментов
-GenericName[sr]=Додатак менију „Алати“
+GenericName[sr]=Прикључак менију „Алати“
+GenericName[sr@Latn]=Priključak meniju „Alati“
 GenericName[sv]=Tillägg i verktygsmenyn
 GenericName[ta]=கருவி பட்டியல் செர்ப்பு
 GenericName[xx]=xxTools menu additionxx
