--- a/parts/uimode/kdevpart_uichooser.desktop
+++ b/parts/uimode/kdevpart_uichooser.desktop
@@ -13,16 +13,19 @@ Comment[fr]=Un module externe pour le choix de l'interface utilisateur de KDevel
 Comment[hu]=Párbeszédablak a grafikus kezelési mód kiválasztásához
 Comment[it]=Provvede una maschera per scegliere la modalità UI.
 Comment[nl]=Biedt een dialoog voor het selecteren van een UI-modus.
+Comment[pl]=Udostępnienie okna dialogowego do wyboru trybu interfejsu.
 Comment[pt]=Oferece uma janela para a selecção do modo de UI.
 Comment[pt_BR]=Fornece um diálogo para seleção modo-UI.
 Comment[ru]=Предоставляет диалог выбора режима интерфейса пользователя.
 Comment[sr]=Обезбеђује прозор за избор UI режима.
+Comment[sr@Latn]=Obezbeđuje prozor za izbor UI režima.
 Comment[sv]=Tillhandahåller en dialogruta för att välja läge för det grafiska gränssnittet.
 Comment[ta]=UI-பாங்கு தேர்வுக்காக உரையாடல் பெட்டி வரும்.
 Comment[xx]=xxProvides a dialog for UI-mode selection.xx
 Comment[zh_CN]=提供用户界面模式选择对话框
 Name=KDevUIChooser
 Name[de]=Fenstermodusauswahl (KDevelop)
+Name[pl]=KDevWybórInterfUżytk
 Name[sv]=KDevelop gränssnittsväljare
 Name[ta]=KDevUI தேர்வாளர்
 Name[xx]=xxKDevUIChooserxx
@@ -36,10 +39,12 @@ GenericName[fr]=Choix de l'interface utilisateur
 GenericName[hu]=felhasználói felület kiválasztása
 GenericName[it]=Selezione dell'interfaccia utente
 GenericName[nl]=Gebruikersinterface selectie
+GenericName[pl]=Wybór interfejsu użytkownika
 GenericName[pt]=Selecção da Interface de Utilizador
 GenericName[pt_BR]=Seleção de Interface-Usuário
 GenericName[ru]=Выбор интерфейса пользователя
 GenericName[sr]=Избор корисничког интерфејса
+GenericName[sr@Latn]=Izbor korisničkog interfejsa
 GenericName[sv]=Användargränssnittsval
 GenericName[ta]=பயண்படுத்துபவரின்-இடைமுக தேர்வு
 GenericName[xx]=xxUser-Interface Selectionxx
